--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -5,6 +5,8 @@
   <string name="title_send_with_token">إرسال %s</string>
   <string name="title_request">استقبال</string>
   <string name="title_import">استعادة المحفظة</string>
+  <!--Bottom navigation-->
+  <string name="bottom_navigation_my_wallets">مَحافظي</string>
   <!-- Strings relatedwalletount creation -->
   <string name="prompt_password">كلمة المرور</string>
   <string name="action_sign_in_short">Create</string>
@@ -333,7 +335,12 @@
   <string name="gamification_leveled_up_body">ستحصل الآن على مكافأة %s على كل عملية شراء. استمر في الشراء للحصول على المزيد!</string>
   <string name="gamification_leveled_up_notification_title">لقد وصلت إلى المستوى التالي!</string>
   <string name="gamification_leveled_up_notification_body">مبروك، ستحصل الآن على مكافأة %s على كل عملية شراء!</string>
-  <string name="gamification_how_max_level_body">مبروك! لقد وصلت إلى أعلى مستوى 💃</string>
+  <string name="gamification_how_max_level_notification_title">لقد فعلتها!</string>
+  <string name="gamification_how_max_level_body">لقد وصلت أعلى مستوى: %s مكافأة على كل عملية شراء!</string>
+  <string name="gamification_level_up_notification_title">كدت تصل!</string>
+  <string name="gamification_level_up_notification_body">أنفق %s AppCoins إضافية لتصل إلى المستوى التالي.</string>
+  <string name="gamification_bonus_plus_perk_title">حصلت على مكافأة إضافية!</string>
+  <string name="gamification_bonus_plus_perk_body">تمتع بـ %1$s مكافأة و %2$s رصيد AppCoins إضافي.</string>
   <!-- Provide wallet address -->
   <string name="provide_wallet_body">اسمح لمحفظة AppCoins بإعطاء عنوان محفظتك إلى %s.</string>
   <string name="provide_wallet_body_placeholders">السماح لـ %1$s بتوفير عنوان محفظتك لـ %2$s.</string>
@@ -500,7 +507,9 @@
   <string name="purchase_error_wallet_block_code_403">يبدو أن هناك مشكلة ما في محفظتك. يرجى التواصل معنا.</string>
   <string name="purchase_card_error_CVV">رمز تحقق خاطئ</string>
   <string name="error_contac_us_body">إذا استمرت هذه المشكلة، يرجى التواصل معنا.</string>
-  <string name="purchase_error_unverified_wallet">Try to complete the purchase after verifying your wallet.</string>
+  <string name="purchase_error_unverified_wallet">حاول أن تنهي عملية الشراء بعد إتمام توثيق محفظتك.</string>
+  <string name="purchase_error_try_other_method">ييي&#8230; هناك خطبٌ ما! يرجى المحاولة ثانية مع وسيلة دفع مختلفة أو التواصل معنا.</string>
+  <string name="purchase_error_try_other_amount">هل أنت متأكد من أن مبلغ المُضاف صحيح؟ يرجى المحاولة مع واحد آخر أو الاتصال بنا!</string>
   <!--Billing address in purchase flow-->
   <string name="purchase_address_title">عنوان الفوترة</string>
   <string name="purchase_address_address_field">العنوان</string>
@@ -560,8 +569,11 @@
   <string name="promotions_tab_poa_title">العب &amp; واربح</string>
   <string name="promotions_empty_promotions_body">لا توجد إعلانات في هذه اللحظة. عُد لاحقًا!</string>
   <string name="promotions_empty_poa_body">لا توجد تطبيقات بها جوائز في هذه اللحظة. عُد لاحقًا!</string>
+  <string name="promotions_empty_first_purchase_body">أجرِ عملية الشراء الأولى لك في اللعبة أو التطبيق وافتح الترقيات التي أعددناها لك!</string>
+  <string name="promotions_empty_suggested_games_title">ألعاب مقترحة</string>
   <string name="promotions_perks_button">امتيازات</string>
   <string name="promotions_vouhers_button">قسائم</string>
+  <string name="promotions_tooltip">اربح رصيد AppCoins مع ترقياتنا!</string>
   <!--Update-->
   <string name="update_wallet_poa_notification_title">تحديث لاستقبال الجوائز</string>
   <string name="update_wallet_poa_notification_body">يرجى تحديث محفظة AppCoins لاستقبال الجوائز.</string>
@@ -697,7 +709,7 @@
   <string name="subscriptions_canceled_body">ملغية</string>
   <string name="subscriptions_details_disclaimer">قد تتغير القيمة في AppCoins للدفعة المقبلة بناء على سعر الصرف.</string>
   <string name="subscriptions_details_button">التفاصيل</string>
-  <string name="subscriptions_manage_button">إدارة الاشتراك</string>
+  <string name="subscriptions_manage_button">MANAGE SUBSCRIPTIONS</string>
   <string name="subscriptions_cancel_button">إلغاء الاشتراك</string>
   <string name="subscriptions_cancel_title">إلغاء الاشتراك</string>
   <string name="subscriptions_cancel_body">هل أنت متأكد أنك تريد إلغاء الاشتراك؟</string>
@@ -707,10 +719,14 @@
   <string name="subscriptions_cancel_confirmation_body">لن تتكلف مزيدًا من الدفعات بعد الآن لهذا الاشتراك، ويمكنك استخدامه حتى %s.</string>
   <string name="subscriptions_category_title">الاشتراك</string>
   <string name="subscriptions_bonus_body">ستتلقى هذه المكافأة على كل عملية شراء.</string>
-  <string name="subscriptions_per_day">%1$s%2$s/يوم</string>
-  <string name="subscriptions_per_week">%1$s%2$s/أسبوع</string>
-  <string name="subscriptions_per_month">%1$s%2$s/شهر</string>
-  <string name="subscriptions_per_year">%1$s%2$s/سنة</string>
+  <string name="subscriptions_per_day">%1$s/day</string>
+  <string name="subscriptions_per_week">%1$s/week</string>
+  <string name="subscriptions_per_month">%1$s/month</string>
+  <string name="subscriptions_per_year">%1$s/year</string>
+  <string name="subscriptions_per_several_day">%1$s every %2$s days</string>
+  <string name="subscriptions_per_several_week">%1$s every %2$s weeks</string>
+  <string name="subscriptions_per_several_month">%1$s every %2$s months</string>
+  <string name="subscriptions_per_several_year">%1$s every %2$s years</string>
   <!--New Gamification-->
   <string name="gamif_title">مكافأة حتى %s%%!</string>
   <string name="gamif_bonus_received">تلقيت المكافأة</string>
@@ -764,7 +780,7 @@
   <string name="carrier_billing_fees_disclaimer">تُطبّق تكاليف إضافية</string>
   <string name="carrier_billing_insert_phone_body">يرجى إدخال رقم الهاتف</string>
   <string name="carrier_billing_phone_field">رقم هاتفك...</string>
-  <string name="carrier_billing_carrier_fees_body">A %1$s fee will be charged</string>
+  <string name="carrier_billing_carrier_fees_body">سيتم خصم رسوم %1$s</string>
   <string name="carrier_billing_purchase_info_body">%1$s في %2$s.</string>
   <string name="carrier_billing_phone_confirmation_body">رقم هاتفك هو %s.</string>
   <string name="carrier_billing_enter_pin_body">يرجى إدخال الرمز الذي تلقيته في رسالة SMS.</string>
@@ -850,19 +866,21 @@
   <string name="rate_us_improve_field__empty_error">يرجى كتابة أي شيء</string>
   <string name="rate_us_possitive_thanks_title">شكرًا لك!</string>
   <string name="rate_us_possitive_thanks_body">نحن سعداء بأنك تحب التطبيق. هل يمكنك مساعدتنا بتقييمنا على متجر التطبيقات؟</string>
-  <string name="rate_us_possitive_rate_button">أعط تقييمًا لمحفظة الـ AppCoins</string>
+  <string name="rate_us_possitive_rate_button">تقييم محفظة AppCoins</string>
   <string name="rate_us_possitive_done_title">نشكرك على تقييمك!</string>
+  <string name="rate_us_back_title">تريد مساعدتنا؟</string>
+  <string name="rate_us_back_body">أضف تقيمك لمحفظة AppCoins على متجر التطبيقات لنعمل على تحسينه.</string>
   <!--Card verification-->
   <string name="card_verification_body">استخدم بطاقة الائتمان للتحقق من محفظتك.</string>
   <string name="card_verification_charde_disclaimer">سنتلقي %s من بطاقتك، وسنعيدها حالما تؤكد لنا الرمز.</string>
   <string name="card_verification_code_title">تفقد الرمز في تفاصيل حركة الدفع</string>
-  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issuer.</string>
+  <string name="card_verification_code_body">سيظهر رمز مميز في ملخص عملية التحويل عن طريق مُصدِر بطاقتك.</string>
   <string name="card_verification_code_example_title">مثال على ملخص إشعار الدفع</string>
   <string name="card_verification_code_example_date">تاريخ التحويل</string>
   <string name="card_verification_code_example_description">الوصف</string>
   <string name="card_verification_code_example_amount">المقدار</string>
-  <string name="card_verification_code_example_code">Unique code.\nExpires in %s days.</string>
-  <string name="card_verification_code_enter_title">Enter the %s digits code</string>
+  <string name="card_verification_code_example_code">رمز مميز.\nتنتهي صلاحيته في %s يومًا.</string>
+  <string name="card_verification_code_enter_title">أدخل الرمز الرقمي لـ %s</string>
   <plurals name="card_verification_code_enter_hours_body">
     <item quantity="zero">%1$s سيتم إرجاعه إليك خلال %2$s ساعة بعد تأكيد الرمز.</item>
     <item quantity="one">%1$s سيتم إرجاعه إليك خلال %2$s ساعتين بعد تأكيد الرمز.</item>
@@ -884,6 +902,8 @@
   <string name="card_verification_wallets_one_step_title">خطوة واحدة أخرى للتحقق</string>
   <string name="card_verification_wallets_one_step_body">أدخل الرمز الذي يظهر في تفاصيل حركة الدفع.</string>
   <string name="card_verification_wallets_insert_bode_button">أدخل الرمز</string>
+  <string name="card_verification_no_attempts_title">Oops, you\'ve inserted a wrong code too many times so %1$s will be refunded to your card.</string>
+  <string name="card_verification_no_attempts_body">Please, start the verification process again.</string>
   <!--Vouchers-->
   <string name="voucher_card_body">اشترِ هذه القسيمة واحصل على مكافأة تصل إلى %s%%.</string>
   <string name="voucher_buy_header">القسيمة لـ %s</string>
@@ -892,4 +912,6 @@
   <string name="voucher_code_title">رمز القسيمة</string>
   <string name="voucher_instructions_body">اذهب إلى %s واستخدم الرمز لاسترداد قسيمتك.</string>
   <string name="voucher_instructions_transactions">يمكنك دائمًا إيجاد رمز القسيمة في سجل التحويلات.</string>
+  <string name="voucher_empty">لا يتوفر لدينا قسائم تسوق حاليًّا.</string>
+  <string name="voucher_tooltip">يمكنك الآن شراء القسائم للألعاب!</string>
 </resources>
