--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -5,6 +5,8 @@
   <string name="title_send_with_token">%s gesendet</string>
   <string name="title_request">Erhalten</string>
   <string name="title_import">Wallet Wiederherstellen</string>
+  <!--Bottom navigation-->
+  <string name="bottom_navigation_my_wallets">Meine Wallets</string>
   <!-- Strings relatedwalletount creation -->
   <string name="prompt_password">Passwort</string>
   <string name="action_sign_in_short">Create</string>
@@ -333,7 +335,12 @@
   <string name="gamification_leveled_up_body">Sie erhalten bei jedem Einkauf jetzt einen Bonus von %s. Kaufen Sie weiter ein und erhalten Sie einen größeren Bonus!</string>
   <string name="gamification_leveled_up_notification_title">Sie haben den nächsten Level erreicht!</string>
   <string name="gamification_leveled_up_notification_body">Gratulation, Sie erhalten bei jedem Einkauf ab jetzt einen Bonus von %s!</string>
-  <string name="gamification_how_max_level_body">Gratulation! Sie haben den höchsten Level erreicht 💃</string>
+  <string name="gamification_how_max_level_notification_title">Sie haben es geschafft!</string>
+  <string name="gamification_how_max_level_body">Sie haben das höchste Level erreicht: %s Bonus für jeden Einkauf!</string>
+  <string name="gamification_level_up_notification_title">Fast geschafft!</string>
+  <string name="gamification_level_up_notification_body">Geben Sie %s AppCoins aus, um den nächsten Level zu erreichen.</string>
+  <string name="gamification_bonus_plus_perk_title">Sie erhalten einen Extra-Bonus!</string>
+  <string name="gamification_bonus_plus_perk_body">Freuen Sie sich über einen Bonus von %1$s und zusätzlichen %2$s AppCoins Credits.</string>
   <!-- Provide wallet address -->
   <string name="provide_wallet_body">Erlauben Sie dem AppCoinsWallet ihre Wallet Adresse an %s weiterzureichen.</string>
   <string name="provide_wallet_body_placeholders">Erlauben Sie %1$s ihre Wallet-Adresse für %2$s zur Verfügung zu stellen.</string>
@@ -410,7 +417,7 @@
   <string name="password">Passwort</string>
   <string name="repeat_password">Paswort wiederholen</string>
   <string name="turn_on_button">Einschalten</string>
-  <string name="no_thanks_button">No, thanks</string>
+  <string name="no_thanks_button">Nein, danke</string>
   <string name="remind_later_button">Erinnern Sie mich später daran</string>
   <string name="get_code_button">Einen Code erhalten</string>
   <string name="confirm_button">Bestätigen</string>
@@ -499,7 +506,9 @@
   <string name="purchase_error_wallet_block_code_403">Upps, etwas ist mit dem Wallet nicht in Ordnung, bitte nehmen Sie Kontakt mit uns auf.</string>
   <string name="purchase_card_error_CVV">Falscher CVV/CVC-Code</string>
   <string name="error_contac_us_body">Nehmen Sie Kontakt zu uns auf, falls das Problem weiterbesteht.</string>
-  <string name="purchase_error_unverified_wallet">Try to complete the purchase after verifying your wallet.</string>
+  <string name="purchase_error_unverified_wallet">Versuchen Sie den Kauf abzuschliessen nach dem Sie ihr Wallet verifiziert haben.</string>
+  <string name="purchase_error_try_other_method">Upps&#8230; Etwas ist schief gelaufen! Bitte versuchen Sie eine andere Bezahlmethode oder nehmen Sie Kontakt zu uns auf.</string>
+  <string name="purchase_error_try_other_amount">Sind Sie sicher das ihr Einzahlungsbetrag korrekt ist? Bitte probieren Sie einen anderen Betrag oder nehmen Sie Kontakt zu uns auf!</string>
   <!--Billing address in purchase flow-->
   <string name="purchase_address_title">Rechnungsadresse</string>
   <string name="purchase_address_address_field">Adresse</string>
@@ -559,8 +568,11 @@
   <string name="promotions_tab_poa_title">SPIELEN &amp; VERDIENEN</string>
   <string name="promotions_empty_promotions_body">Zur Zeit sind keine Werbeaktionen verfügbar. Versuche es später noch einmal!</string>
   <string name="promotions_empty_poa_body">Zur Zeit sind keine Apps mit Prämien verfügbar. Versuche es später noch einmal!</string>
+  <string name="promotions_empty_first_purchase_body">Tätige deinen ersten Einkauf in einem Spiel oder einer App und schalte die Aktionen frei, die wir für Dich erstellt haben!</string>
+  <string name="promotions_empty_suggested_games_title">Vorgeschlagene Spiele</string>
   <string name="promotions_perks_button">Vergütung</string>
   <string name="promotions_vouhers_button">Vouchers</string>
+  <string name="promotions_tooltip">Verdienen Sie gratis AppCoins Credits mit unseren Werbeaktionen!</string>
   <!--Update-->
   <string name="update_wallet_poa_notification_title">Aktualisieren und Prämien erhalten</string>
   <string name="update_wallet_poa_notification_body">Bitte aktualisieren Sie das AppCoins Wallet, um diese Prämie zu erhalten.</string>
@@ -692,7 +704,7 @@
   <string name="subscriptions_canceled_body">Storniert</string>
   <string name="subscriptions_details_disclaimer">Die Menge der AppCoins kann sich wegen der Veränderung des Wechselkurses verändern.</string>
   <string name="subscriptions_details_button">DETAILS</string>
-  <string name="subscriptions_manage_button">ABONNEMENT VERWALTEN</string>
+  <string name="subscriptions_manage_button">MANAGE SUBSCRIPTIONS</string>
   <string name="subscriptions_cancel_button">ABONNEMENT KÜNDIGEN</string>
   <string name="subscriptions_cancel_title">Abonnement kündigen</string>
   <string name="subscriptions_cancel_body">Sind Sie sicher, dass Sie dieses Abonnement kündigen wollen?</string>
@@ -702,10 +714,14 @@
   <string name="subscriptions_cancel_confirmation_body">Sie müssen für dieses Abonnement nichts mehr bezahlen, sie können es noch bis %s nutzen.</string>
   <string name="subscriptions_category_title">Abonnement</string>
   <string name="subscriptions_bonus_body">Sie werden diesen Bonus für jede Bezahlung erhalten.</string>
-  <string name="subscriptions_per_day">%1$s%2$s/Tag</string>
-  <string name="subscriptions_per_week">%1$s%2$s/Woche</string>
-  <string name="subscriptions_per_month">%1$s%2$s/Monat</string>
-  <string name="subscriptions_per_year">%1$s%2$s/Jahr</string>
+  <string name="subscriptions_per_day">%1$s/day</string>
+  <string name="subscriptions_per_week">%1$s/week</string>
+  <string name="subscriptions_per_month">%1$s/month</string>
+  <string name="subscriptions_per_year">%1$s/year</string>
+  <string name="subscriptions_per_several_day">%1$s every %2$s days</string>
+  <string name="subscriptions_per_several_week">%1$s every %2$s weeks</string>
+  <string name="subscriptions_per_several_month">%1$s every %2$s months</string>
+  <string name="subscriptions_per_several_year">%1$s every %2$s years</string>
   <!--New Gamification-->
   <string name="gamif_title">Bis zu %s%% Bonus!</string>
   <string name="gamif_bonus_received">Prämie erhalten</string>
@@ -759,7 +775,7 @@
   <string name="carrier_billing_fees_disclaimer">Es können zusätzliche Gebühren anfallen</string>
   <string name="carrier_billing_insert_phone_body">Bitte geben Sie ihre Telefonnummer ein</string>
   <string name="carrier_billing_phone_field">Ihre Telefonnummer...</string>
-  <string name="carrier_billing_carrier_fees_body">A %1$s fee will be charged</string>
+  <string name="carrier_billing_carrier_fees_body">Es wird eine Gebühr von %1$s berechnet</string>
   <string name="carrier_billing_purchase_info_body">%1$s bei %2$s.</string>
   <string name="carrier_billing_phone_confirmation_body">Ihre Telefonnummer ist %s.</string>
   <string name="carrier_billing_enter_pin_body">Geben Sie bitte den Pin ein, den Sie per SMS erhalten haben.</string>
@@ -835,11 +851,13 @@
   <string name="rate_us_possitive_thanks_body">Wir freuen uns, dass Ihnen die App gefällt; würden Sie uns helfen und eine Bewertung im App-Store abgeben?</string>
   <string name="rate_us_possitive_rate_button">DAS APPCOINS WALLET BEWERTEN</string>
   <string name="rate_us_possitive_done_title">Vielen Dank für Ihr Feedback!</string>
+  <string name="rate_us_back_title">Wollen Sie uns helfen?</string>
+  <string name="rate_us_back_body">Bewerten Sie AppCoins Wallet im App-Store damit wir es verbessern können.</string>
   <!--Card verification-->
   <string name="card_verification_body">Verwenden Sie ihre Kredit-/Debitkarte um ihr Wallet zu verifizieren.</string>
   <string name="card_verification_charde_disclaimer">Wir belasten ihre Karte mit %s und erstatten Ihnen diesen Betrag wieder wenn Sie den Code bestätigen.</string>
   <string name="card_verification_code_title">Überprüfen Sie den Code in den Transaktionsdetails</string>
-  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issuer.</string>
+  <string name="card_verification_code_body">Es wird ein einmaliger Code in der Zusammenfassung ihrer Transaktion, die von ihrem Kartenaussteller zur Verfügung gestellt wird, erscheinen.</string>
   <string name="card_verification_code_example_title">Beispiel einer Zusammenfassung einer Transaktion</string>
   <string name="card_verification_code_example_date">Trans. Datum</string>
   <string name="card_verification_code_example_description">Beschreibung</string>
@@ -859,6 +877,8 @@
   <string name="card_verification_wallets_one_step_title">Ein zusätzlicher Schritt zur Bestätigung</string>
   <string name="card_verification_wallets_one_step_body">Geben Sie den Code ein der in ihren Transaktionsdetails erscheint.</string>
   <string name="card_verification_wallets_insert_bode_button">Code eingeben</string>
+  <string name="card_verification_no_attempts_title">Oops, you\'ve inserted a wrong code too many times so %1$s will be refunded to your card.</string>
+  <string name="card_verification_no_attempts_body">Please, start the verification process again.</string>
   <!--Vouchers-->
   <string name="voucher_card_body">Kaufen Sie diesen Voucher und erhalten Sie einen Bonus von bis zu %s%%.</string>
   <string name="voucher_buy_header">Voucher für %s</string>
@@ -867,4 +887,6 @@
   <string name="voucher_code_title">Voucher Code</string>
   <string name="voucher_instructions_body">Gehen Sie zu %s und nutzen Sie den Code um ihren Voucher einzulösen.</string>
   <string name="voucher_instructions_transactions">Sie können den Voucher-Code stets in der Transaktions-Historie finden.</string>
+  <string name="voucher_empty">Zur Zeit sind keine Gutscheine verfügbar.</string>
+  <string name="voucher_tooltip">Sie können jetzt Gutscheine für die Spiele kaufen!</string>
 </resources>
