--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -5,6 +5,8 @@
   <string name="title_send_with_token">ارسال %s</string>
   <string name="title_request">دریافت</string>
   <string name="title_import">بازیابی کیف‌پول</string>
+  <!--Bottom navigation-->
+  <string name="bottom_navigation_my_wallets">کیف‌پول ‌های من</string>
   <!-- Strings relatedwalletount creation -->
   <string name="prompt_password">رمزعبور</string>
   <string name="action_sign_in_short">Create</string>
@@ -333,7 +335,12 @@
   <string name="gamification_leveled_up_body">%s پاداش برای هر خرید دریافت خواهید کرد. به خرید ادامه دهید تا پاداش بیشتری کسب کنید!</string>
   <string name="gamification_leveled_up_notification_title">به مرحله بعد رسیده‌اید!</string>
   <string name="gamification_leveled_up_notification_body">تبریک، پاداش %s برای هر خرید دریافت خواهید کرد!</string>
-  <string name="gamification_how_max_level_body">تبریک! به بالاترین مرحله رسیدید 💃</string>
+  <string name="gamification_how_max_level_notification_title">موفق شدید!</string>
+  <string name="gamification_how_max_level_body">به بالاترین مرحله رسیدید: %s پاداش در هر خرید!</string>
+  <string name="gamification_level_up_notification_title">بسیار نزدیک!</string>
+  <string name="gamification_level_up_notification_body">%s AppCoins بیشتری پرداخت کنید تا به مرحله بعدی برسید.</string>
+  <string name="gamification_bonus_plus_perk_title">یک پاداش اضافی گرفتید!</string>
+  <string name="gamification_bonus_plus_perk_body">از %1$s پاداش و %2$s AppCoins Credits اضافی لذت ببرید.</string>
   <!-- Provide wallet address -->
   <string name="provide_wallet_body">به کیف پول AppCoins اجازه دهید که آدرس کیف پول شما را به %s بدهد.</string>
   <string name="provide_wallet_body_placeholders">به %1$s اجازه دهید که آدرس کیف پول شما را به %2$s بدهد.</string>
@@ -500,6 +507,8 @@
   <string name="purchase_card_error_CVV">CVV/CVC اشتباه</string>
   <string name="error_contac_us_body">اگر مشکل ادامه داشت لطفا با ما تماس بگیرید.</string>
   <string name="purchase_error_unverified_wallet">سعی کنید خرید خود را پس از تایید کیف پول تکمیل کنید.</string>
+  <string name="purchase_error_try_other_method">اوه&#8230; مشکلی پیش آمده‌است! لطفا روش دیگری برای پرداخت امتحان کنید یا با ما تماس بگیرید.</string>
+  <string name="purchase_error_try_other_amount">آیا مطمئن هستید که مبلغ افزایشی شما صحیح است؟ لطفا روش دیگری را امتحان کنید یا با ما تماس بگیرید!</string>
   <!--Billing address in purchase flow-->
   <string name="purchase_address_title">نشانی پرداخت</string>
   <string name="purchase_address_address_field">نشانی</string>
@@ -559,8 +568,11 @@
   <string name="promotions_tab_poa_title">بازی و جایزه</string>
   <string name="promotions_empty_promotions_body">هیچ پیشنهاد تشویقی در حال حاضر موجود نیست. بعدا بازگردید!</string>
   <string name="promotions_empty_poa_body">هیچ اپلیکیشنی با این پاداش در حال حاضر موجود نیست. بعدا بازگردید!</string>
+  <string name="promotions_empty_first_purchase_body">اولین خرید خود را در یک بازی یا اپلیکیشن انجام دهید و پیشنهادهای تشویقی که برای شما در نظر گرفتیم را باز کنید!</string>
+  <string name="promotions_empty_suggested_games_title">بازی‌های پیشنهادی</string>
   <string name="promotions_perks_button">هدیه‌ها</string>
   <string name="promotions_vouhers_button">ووچرها</string>
+  <string name="promotions_tooltip">با پیشنهادهای تشویقی ما AppCoins Credits رایگان دریافت کنید!</string>
   <!--Update-->
   <string name="update_wallet_poa_notification_title">بروزرسانی کنید و پاداش دریافت کنید</string>
   <string name="update_wallet_poa_notification_body">لطفا AppCoins Wallet را بروزرسانی کنید تا این پاداش را دریافت کنید.</string>
@@ -692,7 +704,7 @@
   <string name="subscriptions_canceled_body">لغو شده‌</string>
   <string name="subscriptions_details_disclaimer">ارزش در AppCoins ممکن است با توجه به نرخ تبدیل برای پرداخت بعدی شما تغییر کند.</string>
   <string name="subscriptions_details_button">جزییات</string>
-  <string name="subscriptions_manage_button">مدیریت آبونمان</string>
+  <string name="subscriptions_manage_button">MANAGE SUBSCRIPTIONS</string>
   <string name="subscriptions_cancel_button">لغو آبونمان</string>
   <string name="subscriptions_cancel_title">لغو آبونمان</string>
   <string name="subscriptions_cancel_body">آیا مطمئن هستید که می‌خواهید این آبونمان را لغو کنید؟</string>
@@ -702,10 +714,14 @@
   <string name="subscriptions_cancel_confirmation_body">دیگر برای این آبونمان پرداختی نخواهید داشت، تا %s می‌توانید آن را استفاده کنید.</string>
   <string name="subscriptions_category_title">آبونمان</string>
   <string name="subscriptions_bonus_body">این پاداش را روی همه پرداخت‌ها دریافت خواهید کرد.</string>
-  <string name="subscriptions_per_day">%1$s%2$s/روز</string>
-  <string name="subscriptions_per_week">%1$s%2$s/هفته</string>
-  <string name="subscriptions_per_month">%1$s%2$s/ماه</string>
-  <string name="subscriptions_per_year">%1$s%2$s/سال</string>
+  <string name="subscriptions_per_day">%1$s/day</string>
+  <string name="subscriptions_per_week">%1$s/week</string>
+  <string name="subscriptions_per_month">%1$s/month</string>
+  <string name="subscriptions_per_year">%1$s/year</string>
+  <string name="subscriptions_per_several_day">%1$s every %2$s days</string>
+  <string name="subscriptions_per_several_week">%1$s every %2$s weeks</string>
+  <string name="subscriptions_per_several_month">%1$s every %2$s months</string>
+  <string name="subscriptions_per_several_year">%1$s every %2$s years</string>
   <!--New Gamification-->
   <string name="gamif_title">تا %s%% پاداش!</string>
   <string name="gamif_bonus_received">پاداش دریافت شد</string>
@@ -759,7 +775,7 @@
   <string name="carrier_billing_fees_disclaimer">ممکن است هزینه‌های جانبی وارد شود</string>
   <string name="carrier_billing_insert_phone_body">لطفا شماره تلفن خود را وارد کنید</string>
   <string name="carrier_billing_phone_field">شماره تلفن شما...</string>
-  <string name="carrier_billing_carrier_fees_body">A %1$s fee will be charged</string>
+  <string name="carrier_billing_carrier_fees_body">هزینه %1$s محاسبه خواهد شد</string>
   <string name="carrier_billing_purchase_info_body">%1$s در %2$s.</string>
   <string name="carrier_billing_phone_confirmation_body">شماره تلفن شما %s است.</string>
   <string name="carrier_billing_enter_pin_body">لطفا PIN را که از طریق SMS دریافت کردید وارد کنید.</string>
@@ -835,6 +851,8 @@
   <string name="rate_us_possitive_thanks_body">خوشحالیم که اپلیکیشن ما را دوست دارید. آیا می‌توانید با رتبه بندی ما در فروشگاه اپلیکیشن به ما کمک کنید؟</string>
   <string name="rate_us_possitive_rate_button">رتبه‌بندی APPCOINS WALLET</string>
   <string name="rate_us_possitive_done_title">از بازخورد شما متشکریم!</string>
+  <string name="rate_us_back_title">آیا می‌خواهید به ما کمک کنید؟</string>
+  <string name="rate_us_back_body">AppCoins Wallet را در فروشگاه اپلیکیشن رتبه بندی کنید تا بتوانیم آن را بهتر کنیم.</string>
   <!--Card verification-->
   <string name="card_verification_body">برای تایید کیف پول خود از کارت اعتباری خود استفاده کنید.</string>
   <string name="card_verification_charde_disclaimer">ما %s را در کارت شما شارژ خواهیم کرد و پس از تایید کد توسط شما آن را باز می‌گردانیم.</string>
@@ -859,6 +877,8 @@
   <string name="card_verification_wallets_one_step_title">یک قدم دیگر تا تایید</string>
   <string name="card_verification_wallets_one_step_body">کدی را که در جزییات تراکنش است را وارد کنید.</string>
   <string name="card_verification_wallets_insert_bode_button">وارد کردن کد</string>
+  <string name="card_verification_no_attempts_title">Oops, you\'ve inserted a wrong code too many times so %1$s will be refunded to your card.</string>
+  <string name="card_verification_no_attempts_body">Please, start the verification process again.</string>
   <!--Vouchers-->
   <string name="voucher_card_body">این ووچر را بخرید و تا %s%% پاداش بگیرید.</string>
   <string name="voucher_buy_header">ووچر برای %s</string>
@@ -867,4 +887,6 @@
   <string name="voucher_code_title">کد ووچر</string>
   <string name="voucher_instructions_body">به %s بروید و کد را برای آزادکردن ووچر خود استفاده کنید.</string>
   <string name="voucher_instructions_transactions">همیشه می‌توانید کد ووچر را در تاریخچه تراکنش‌ها پیدا کنید.</string>
+  <string name="voucher_empty">هیچ ووچری در حال حاضر موجود نیست.</string>
+  <string name="voucher_tooltip">اکنون می‌توانید برای بازی‌ها ووچر بخرید!</string>
 </resources>
