--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -5,6 +5,8 @@
   <string name="title_send_with_token">Kirim %s</string>
   <string name="title_request">Terima</string>
   <string name="title_import">Pulihkan Dompet</string>
+  <!--Bottom navigation-->
+  <string name="bottom_navigation_my_wallets">Dompet Saya</string>
   <!-- Strings relatedwalletount creation -->
   <string name="prompt_password">Kata Sandi</string>
   <string name="action_sign_in_short">Create</string>
@@ -333,7 +335,12 @@
   <string name="gamification_leveled_up_body">Sekarang Anda akan mendapatkan bonus %s di setiap pembelian. Teruslah membeli agar bonus yang didapatkan lebih banyak lagi!</string>
   <string name="gamification_leveled_up_notification_title">Anda sudah mencapai tingkat berikutnya!</string>
   <string name="gamification_leveled_up_notification_body">Selamat, Anda sekarang akan mendapatkan bonus %s di setiap pembelian!</string>
-  <string name="gamification_how_max_level_body">Selamat! Anda sudah mencapai tingkat tertinggi 💃</string>
+  <string name="gamification_how_max_level_notification_title">Anda Berhasil!</string>
+  <string name="gamification_how_max_level_body">Anda sudah mencapai level tertinggi: %s Bonus di setiap pembelian!</string>
+  <string name="gamification_level_up_notification_title">Hampir sampai!</string>
+  <string name="gamification_level_up_notification_body">Habiskan %s AppCoins lagi untuk mencapai level berikutnya.</string>
+  <string name="gamification_bonus_plus_perk_title">Anda mendapat bonus ekstra!</string>
+  <string name="gamification_bonus_plus_perk_body">Nikmati %1$s bonus dan %2$s Kredit AppCoins tambahan.</string>
   <!-- Provide wallet address -->
   <string name="provide_wallet_body">Izinkan Dompet AppCoins untuk menginformasikan alamat dompet Anda ke %s.</string>
   <string name="provide_wallet_body_placeholders">Izinkan %1$s untuk menginformasikan alamat dompet Anda ke %2$s.</string>
@@ -500,6 +507,8 @@
   <string name="purchase_card_error_CVV">CVV/CVC salah</string>
   <string name="error_contac_us_body">Kalau masalah tetap ada, silakan hubungi kami.</string>
   <string name="purchase_error_unverified_wallet">Coba selesaikan pembelian setelah memverifikasi dompet Anda.</string>
+  <string name="purchase_error_try_other_method">Ups&#8230; Sedang terjadi sesuatu! Harap coba dengan metode pembayaran lain atau hubungi kami.</string>
+  <string name="purchase_error_try_other_amount">Apakah Anda yakin jumlah top-up Anda sudah benar? Silakan coba metode yang lain atau hubungi kami!</string>
   <!--Billing address in purchase flow-->
   <string name="purchase_address_title">Alamat penagihan</string>
   <string name="purchase_address_address_field">Alamat</string>
@@ -559,8 +568,11 @@
   <string name="promotions_tab_poa_title">MAIN &amp; BERPENGHASILAN</string>
   <string name="promotions_empty_promotions_body">Saat ini tidak tersedia promosi. Kembali lagi nanti!</string>
   <string name="promotions_empty_poa_body">Saat ini tidak tersedia aplikasi yang dilengkapi hadiah. Kembali lagi nanti!</string>
+  <string name="promotions_empty_first_purchase_body">Lakukan pembelian pertama Anda di game atau aplikasi dan buka promosi yang kami sediakan untuk Anda!</string>
+  <string name="promotions_empty_suggested_games_title">Game yang Disarankan</string>
   <string name="promotions_perks_button">Bonus</string>
   <string name="promotions_vouhers_button">Voucher</string>
+  <string name="promotions_tooltip">Dapatkan Kredit AppCoins gratis dengan promosi kami!</string>
   <!--Update-->
   <string name="update_wallet_poa_notification_title">Perbarui untuk menerima hadiah</string>
   <string name="update_wallet_poa_notification_body">Harap perbarui Dompet AppCoins untuk menerima hadiah ini.</string>
@@ -691,7 +703,7 @@
   <string name="subscriptions_canceled_body">Dibatalkan</string>
   <string name="subscriptions_details_disclaimer">Nilai dalam AppCoins bisa bervariasi untuk pembayaran berikutnya karena perubahan nilai tukar.</string>
   <string name="subscriptions_details_button">RINCIAN</string>
-  <string name="subscriptions_manage_button">KELOLA LANGGANAN</string>
+  <string name="subscriptions_manage_button">MANAGE SUBSCRIPTIONS</string>
   <string name="subscriptions_cancel_button">BATALKAN LANGGANAN</string>
   <string name="subscriptions_cancel_title">Batalkan Langganan</string>
   <string name="subscriptions_cancel_body">Apakah Anda yakin ingin membatalkan langganan ini?</string>
@@ -701,10 +713,14 @@
   <string name="subscriptions_cancel_confirmation_body">Anda tidak akan dikenai biaya lagi untuk paket langganan ini, dan Anda bisa menggunakannya sampai %s.</string>
   <string name="subscriptions_category_title">Langganan</string>
   <string name="subscriptions_bonus_body">Anda akan menerima bonus ini di setiap pembayaran.</string>
-  <string name="subscriptions_per_day">%1$s%2$s/hari</string>
-  <string name="subscriptions_per_week">%1$s%2$s/minggu</string>
-  <string name="subscriptions_per_month">%1$s%2$s/bulan</string>
-  <string name="subscriptions_per_year">%1$s%2$s/tahun</string>
+  <string name="subscriptions_per_day">%1$s/day</string>
+  <string name="subscriptions_per_week">%1$s/week</string>
+  <string name="subscriptions_per_month">%1$s/month</string>
+  <string name="subscriptions_per_year">%1$s/year</string>
+  <string name="subscriptions_per_several_day">%1$s every %2$s days</string>
+  <string name="subscriptions_per_several_week">%1$s every %2$s weeks</string>
+  <string name="subscriptions_per_several_month">%1$s every %2$s months</string>
+  <string name="subscriptions_per_several_year">%1$s every %2$s years</string>
   <!--New Gamification-->
   <string name="gamif_title">Bonus Hingga %s%%!</string>
   <string name="gamif_bonus_received">Bonus diterima</string>
@@ -758,7 +774,7 @@
   <string name="carrier_billing_fees_disclaimer">Mungkin akan dikenakan biaya tambahan</string>
   <string name="carrier_billing_insert_phone_body">Silakan masukkan nomor telepon Anda</string>
   <string name="carrier_billing_phone_field">Nomor telepon Anda...</string>
-  <string name="carrier_billing_carrier_fees_body">A %1$s fee will be charged</string>
+  <string name="carrier_billing_carrier_fees_body">Akan dibebankan biaya sebesar %1$s</string>
   <string name="carrier_billing_purchase_info_body">%1$s di %2$s.</string>
   <string name="carrier_billing_phone_confirmation_body">Nomor telepon Anda adalah %s.</string>
   <string name="carrier_billing_enter_pin_body">Silakan masukkan PIN yang diterima lewat SMS.</string>
@@ -831,6 +847,8 @@
   <string name="rate_us_possitive_thanks_body">Kami senang Anda menyukai aplikasi kami. Bisakah Anda membantu kami dengan memberi nilai untuk kami di toko aplikasi?</string>
   <string name="rate_us_possitive_rate_button">BERI NILAI UNTUK DOMPET APPCOINS</string>
   <string name="rate_us_possitive_done_title">Terima kasih atas umpan balik Anda!</string>
+  <string name="rate_us_back_title">Ingin membantu kami?</string>
+  <string name="rate_us_back_body">Beri nilai Dompet AppCoins di toko aplikasi agar kami bisa meningkatkannya.</string>
   <!--Card verification-->
   <string name="card_verification_body">Gunakan kartu kredit/debit Anda untuk memverifikasi dompet Anda.</string>
   <string name="card_verification_charde_disclaimer">Kami akan membebankan %s ke kartu Anda, dan kami akan mengembalikannya setelah Anda mengkonfirmasi kodenya.</string>
@@ -853,6 +871,8 @@
   <string name="card_verification_wallets_one_step_title">Satu langkah lagi untuk memvalidasi</string>
   <string name="card_verification_wallets_one_step_body">Masukkan kode yang muncul dalam rincian transaksi.</string>
   <string name="card_verification_wallets_insert_bode_button">Masukkan kode</string>
+  <string name="card_verification_no_attempts_title">Oops, you\'ve inserted a wrong code too many times so %1$s will be refunded to your card.</string>
+  <string name="card_verification_no_attempts_body">Please, start the verification process again.</string>
   <!--Vouchers-->
   <string name="voucher_card_body">Beli voucher ini dan dapatkan bonus sampai %s%%.</string>
   <string name="voucher_buy_header">Voucher untuk %s</string>
@@ -861,4 +881,6 @@
   <string name="voucher_code_title">Kode Voucher</string>
   <string name="voucher_instructions_body">Masuk ke %s dan gunakan kode untuk menukarkan voucher Anda.</string>
   <string name="voucher_instructions_transactions">Anda bisa menemukan kode voucher dalam riwayat transaksi.</string>
+  <string name="voucher_empty">Tidak tersedia voucher saat ini.</string>
+  <string name="voucher_tooltip">Sekarang Anda bisa membeli voucher untuk game!</string>
 </resources>
