--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -5,6 +5,8 @@
   <string name="title_send_with_token">Invia %s</string>
   <string name="title_request">Ricevi</string>
   <string name="title_import">Recupera wallet</string>
+  <!--Bottom navigation-->
+  <string name="bottom_navigation_my_wallets">I miei wallet</string>
   <!-- Strings relatedwalletount creation -->
   <string name="prompt_password">Password</string>
   <string name="action_sign_in_short">Create</string>
@@ -333,7 +335,12 @@
   <string name="gamification_leveled_up_body">D\'ora in poi riceverai un bonus di %s a ogni acquisto. Continua a effettuare acquisti per guadagnare ancora di più!</string>
   <string name="gamification_leveled_up_notification_title">Hai raggiunto il livello successivo!</string>
   <string name="gamification_leveled_up_notification_body">Congratulazioni, d\'ora in poi riceverai un bonus di %s a ogni acquisto!</string>
-  <string name="gamification_how_max_level_body">Congratulazioni! Hai raggiunto il livello più alto</string>
+  <string name="gamification_how_max_level_notification_title">Ce l\'hai fatta!</string>
+  <string name="gamification_how_max_level_body">Hai raggiunto il livello più alto: %s di bonus su ogni acquisto!</string>
+  <string name="gamification_level_up_notification_title">Ci siamo quasi!</string>
+  <string name="gamification_level_up_notification_body">Spendi ancora %s AppCoins per raggiungere il prossimo livello.</string>
+  <string name="gamification_bonus_plus_perk_title">Hai ricevuto un bonus extra!</string>
+  <string name="gamification_bonus_plus_perk_body">Sfrutta un bonus di %1$s e %2$s AppCoins Credits extra.</string>
   <!-- Provide wallet address -->
   <string name="provide_wallet_body">Consenti ad AppCoins Wallet di fornire l\'indirizzo del tuo portafoglio a %s.</string>
   <string name="provide_wallet_body_placeholders">Consenti ad %1$s di fornire l\'indirizzo del tuo wallet %2$s.</string>
@@ -500,6 +507,8 @@
   <string name="purchase_card_error_CVV">CVV/CVC errato</string>
   <string name="error_contac_us_body">Se il problema persiste, contattaci.</string>
   <string name="purchase_error_unverified_wallet">Prova a completare l\'acquisto dopo aver verificato il tuo wallet.</string>
+  <string name="purchase_error_try_other_method">Ops&#8230; Qualcosa è andato storto! Prova un altro metodo di pagamento oppure contattaci.</string>
+  <string name="purchase_error_try_other_amount">Sei sicuro che l\'importo da ricaricare sia corretto? Prova a inserirne un altro oppure contattaci!</string>
   <!--Billing address in purchase flow-->
   <string name="purchase_address_title">Indirizzo di fatturazione</string>
   <string name="purchase_address_address_field">Indirizzo</string>
@@ -559,8 +568,11 @@
   <string name="promotions_tab_poa_title">GIOCA &amp; GUADAGNA</string>
   <string name="promotions_empty_promotions_body">Al momento non ci sono promozioni disponibili. Torna più tardi!</string>
   <string name="promotions_empty_poa_body">Al momento non ci sono app con premi disponibili. Torna più tardi!</string>
+  <string name="promotions_empty_first_purchase_body">Sblocca le promozioni che abbiamo in serbo per te col primo acquisto in un gioco o una app!</string>
+  <string name="promotions_empty_suggested_games_title">In primo piano</string>
   <string name="promotions_perks_button">Extra</string>
   <string name="promotions_vouhers_button">Voucher</string>
+  <string name="promotions_tooltip">Accumula AppCoins Credits gratis con le nostre promozioni!</string>
   <!--Update-->
   <string name="update_wallet_poa_notification_title">Effettua l\'aggiornamento per ricevere premi</string>
   <string name="update_wallet_poa_notification_body">Aggiorna l\'AppCoins Wallet per ricevere questo premio.</string>
@@ -692,7 +704,7 @@
   <string name="subscriptions_canceled_body">Annullato</string>
   <string name="subscriptions_details_disclaimer">Il valore in AppCoins potrebbe variare per il prossimo pagamento a causa del tasso di cambio.</string>
   <string name="subscriptions_details_button">INFO</string>
-  <string name="subscriptions_manage_button">GESTISCI ABBONAMENTO</string>
+  <string name="subscriptions_manage_button">MANAGE SUBSCRIPTIONS</string>
   <string name="subscriptions_cancel_button">ANNULLA ABBONAMENTO</string>
   <string name="subscriptions_cancel_title">Annulla abbonamento</string>
   <string name="subscriptions_cancel_body">Sei sicuro di voler annullare questo abbonamento?</string>
@@ -702,10 +714,14 @@
   <string name="subscriptions_cancel_confirmation_body">Non ti verranno addebitati altri costi per questo abbonamento e potrai usarlo fino al giorno %s.</string>
   <string name="subscriptions_category_title">Abbonamento</string>
   <string name="subscriptions_bonus_body">Riceverai questo bonus per ciascun pagamento.</string>
-  <string name="subscriptions_per_day">%1$s%2$s/al giorno</string>
-  <string name="subscriptions_per_week">%1$s%2$s/a settimana</string>
-  <string name="subscriptions_per_month">%1$s%2$s/al mese</string>
-  <string name="subscriptions_per_year">%1$s%2$s/all\'anno</string>
+  <string name="subscriptions_per_day">%1$s/day</string>
+  <string name="subscriptions_per_week">%1$s/week</string>
+  <string name="subscriptions_per_month">%1$s/month</string>
+  <string name="subscriptions_per_year">%1$s/year</string>
+  <string name="subscriptions_per_several_day">%1$s every %2$s days</string>
+  <string name="subscriptions_per_several_week">%1$s every %2$s weeks</string>
+  <string name="subscriptions_per_several_month">%1$s every %2$s months</string>
+  <string name="subscriptions_per_several_year">%1$s every %2$s years</string>
   <!--New Gamification-->
   <string name="gamif_title">Fino al %s%% di bonus!</string>
   <string name="gamif_bonus_received">Bonus ricevuto</string>
@@ -759,7 +775,7 @@
   <string name="carrier_billing_fees_disclaimer">Possono essere applicati dei costi aggiuntivi</string>
   <string name="carrier_billing_insert_phone_body">Inserisci il tuo numero di telefono</string>
   <string name="carrier_billing_phone_field">Il tuo numero di telefono...</string>
-  <string name="carrier_billing_carrier_fees_body">A %1$s fee will be charged</string>
+  <string name="carrier_billing_carrier_fees_body">Verrà addebitato un importo di %1$s</string>
   <string name="carrier_billing_purchase_info_body">%1$s in %2$s.</string>
   <string name="carrier_billing_phone_confirmation_body">Il tuo numero di telefono è %s.</string>
   <string name="carrier_billing_enter_pin_body">Inserisci il PIN che hai ricevuto tramite SMS.</string>
@@ -833,8 +849,10 @@
   <string name="rate_us_improve_field__empty_error">Scrivi qualcosa</string>
   <string name="rate_us_possitive_thanks_title">Grazie!</string>
   <string name="rate_us_possitive_thanks_body">Siamo contenti che ti piaccia l\'app. Puoi aiutarci dando una valutazione all\'app store?</string>
-  <string name="rate_us_possitive_rate_button">VALUTA IL WALLET APPCOINS</string>
+  <string name="rate_us_possitive_rate_button">VALUTA L\'APPCOINS WALLET</string>
   <string name="rate_us_possitive_done_title">Grazie del commento!</string>
+  <string name="rate_us_back_title">Vuoi darci una mano?</string>
+  <string name="rate_us_back_body">Valuta l\'AppCoins Wallet sull\'app store in modo da aiutarci a migliorarlo.</string>
   <!--Card verification-->
   <string name="card_verification_body">Usa la tua carta di credito/debito per verificare il tuo wallet.</string>
   <string name="card_verification_charde_disclaimer">Prenderemo un pagamento di %s dalla tua carta e lo rimborseremo quando confermerai il codice.</string>
@@ -859,6 +877,8 @@
   <string name="card_verification_wallets_one_step_title">Un ultimo passaggio per la convalida</string>
   <string name="card_verification_wallets_one_step_body">Inserisci il codice che appare nei dati della transazione.</string>
   <string name="card_verification_wallets_insert_bode_button">Inserisci il codice</string>
+  <string name="card_verification_no_attempts_title">Oops, you\'ve inserted a wrong code too many times so %1$s will be refunded to your card.</string>
+  <string name="card_verification_no_attempts_body">Please, start the verification process again.</string>
   <!--Vouchers-->
   <string name="voucher_card_body">Acquista questo voucher e ottieni un bonus fino a %s%%.</string>
   <string name="voucher_buy_header">Voucher per %s</string>
@@ -867,4 +887,6 @@
   <string name="voucher_code_title">Codice voucher</string>
   <string name="voucher_instructions_body">Vai su %s e usa il codice per riscattare il voucher.</string>
   <string name="voucher_instructions_transactions">Puoi sempre trovare il codice nell\'archivio delle transazioni.</string>
+  <string name="voucher_empty">Al momento non ci sono voucher disponibili.</string>
+  <string name="voucher_tooltip">Puoi adesso acquistare voucher per i giochi!</string>
 </resources>
