--- a/app/src/main/res/values-ms/strings.xml
+++ b/app/src/main/res/values-ms/strings.xml
@@ -5,6 +5,8 @@
   <string name="title_send_with_token">Hantar %s</string>
   <string name="title_request">Terima</string>
   <string name="title_import">Dapatkan Semula Dompet</string>
+  <!--Bottom navigation-->
+  <string name="bottom_navigation_my_wallets">Dompet Saya</string>
   <!-- Strings relatedwalletount creation -->
   <string name="prompt_password">Kata laluan</string>
   <string name="action_sign_in_short">Create</string>
@@ -333,7 +335,12 @@
   <string name="gamification_leveled_up_body">Anda akan dapat %s bonus bagi setiap pembelian. Terus membeli untuk dapat lebih banyak!</string>
   <string name="gamification_leveled_up_notification_title">Anda telah capai tahap seterusnya!</string>
   <string name="gamification_leveled_up_notification_body">Tahniah! Kini anda akan dapat %s bonus bagi setiap pembelian!</string>
-  <string name="gamification_how_max_level_body">Tahniah! Anda telah capat tahap tertinggi 💃</string>
+  <string name="gamification_how_max_level_notification_title">Anda Berjaya!</string>
+  <string name="gamification_how_max_level_body">Anda telah capai tahap tertinggi: Bonus %s bagi setiap pembelian!</string>
+  <string name="gamification_level_up_notification_title">Sikit lagi!</string>
+  <string name="gamification_level_up_notification_body">Belanja sebanyak %s AppCoins untuk capai tahap seterusnya.</string>
+  <string name="gamification_bonus_plus_perk_title">Anda dapat bonus ekstra!</string>
+  <string name="gamification_bonus_plus_perk_body">Nikmati %1$s bonus dan %2$s ekstra Kredit AppCoins.</string>
   <!-- Provide wallet address -->
   <string name="provide_wallet_body">Izinkan Dompet AppCoins untuk berikan alamat dompet anda kepada %s.</string>
   <string name="provide_wallet_body_placeholders">Izinkan %1$s untuk berikan alamat dompet anda kepada %2$s.</string>
@@ -410,7 +417,7 @@
   <string name="password">Kata laluan</string>
   <string name="repeat_password">Ulang kata laluan</string>
   <string name="turn_on_button">Dayakan</string>
-  <string name="no_thanks_button">No, thanks</string>
+  <string name="no_thanks_button">Tidak</string>
   <string name="remind_later_button">Ingatkan saya nanti</string>
   <string name="get_code_button">Dapatkan kod</string>
   <string name="confirm_button">Sahkan</string>
@@ -499,7 +506,9 @@
   <string name="purchase_error_wallet_block_code_403">Alamak, dompet anda ada masalah. Sila hubungi kami.</string>
   <string name="purchase_card_error_CVV">Salah CVV/CVC</string>
   <string name="error_contac_us_body">Jika masalah berlanjutan, sila hubungi kami.</string>
-  <string name="purchase_error_unverified_wallet">Try to complete the purchase after verifying your wallet.</string>
+  <string name="purchase_error_unverified_wallet">Cuba selesaikan pembelian setelah mengesahkan dompet anda.</string>
+  <string name="purchase_error_try_other_method">Oops&#8230; Ada yang tak kena! Sila cuba dengan kaedah bayaran lain atau hubungi kami.</string>
+  <string name="purchase_error_try_other_amount">Baki tambah nilai anda cukup tak? Sila cuba dengan kaedah lain atau hubungi kami!</string>
   <!--Billing address in purchase flow-->
   <string name="purchase_address_title">Alamat bil</string>
   <string name="purchase_address_address_field">Alamat</string>
@@ -559,8 +568,11 @@
   <string name="promotions_tab_poa_title">MAIN &amp; DAPAT</string>
   <string name="promotions_empty_promotions_body">Tiada promosi buat masa ini. Semak semula nanti!</string>
   <string name="promotions_empty_poa_body">Tiada aplikasi dengan ganjaran tersedia buat masa ini. Semak semula nanti!</string>
+  <string name="promotions_empty_first_purchase_body">Buat pembelian pertama anda dalam permainan atau aplikasi dan peroleh promosi yang kami tawarkan kepada anda!</string>
+  <string name="promotions_empty_suggested_games_title">Cadangan Permainan</string>
   <string name="promotions_perks_button">Istimewa</string>
   <string name="promotions_vouhers_button">Baucar</string>
+  <string name="promotions_tooltip">Dapat Kredit AppCoins percuma dengan promosi kami!</string>
   <!--Update-->
   <string name="update_wallet_poa_notification_title">Kemas kini untuk terima ganjaran</string>
   <string name="update_wallet_poa_notification_body">Sila kemas kini Dompet AppCoins untuk terima ganjaran ini.</string>
@@ -691,7 +703,7 @@
   <string name="subscriptions_canceled_body">Dibatalkan</string>
   <string name="subscriptions_details_disclaimer">Nilai dalam AppCoins mungkin berubah pada pembayaran seterusnya kerana kadar pertukaran wang.</string>
   <string name="subscriptions_details_button">BUTIRAN</string>
-  <string name="subscriptions_manage_button">URUS LANGGANAN</string>
+  <string name="subscriptions_manage_button">MANAGE SUBSCRIPTIONS</string>
   <string name="subscriptions_cancel_button">BATAL LANGGANAN</string>
   <string name="subscriptions_cancel_title">Batal Langganan</string>
   <string name="subscriptions_cancel_body">Anda pasti mahu batalkan langganan ini?</string>
@@ -701,10 +713,14 @@
   <string name="subscriptions_cancel_confirmation_body">Anda tidak akan dikenakan bayaran lagi untuk langganan ini, dan anda boleh gunakannya sehingga %s.</string>
   <string name="subscriptions_category_title">Langganan</string>
   <string name="subscriptions_bonus_body">Anda akan terima bonus ini bagi setiap bayaran.</string>
-  <string name="subscriptions_per_day">%1$s%2$s/hari</string>
-  <string name="subscriptions_per_week">%1$s%2$s/minggu</string>
-  <string name="subscriptions_per_month">%1$s%2$s/bulan</string>
-  <string name="subscriptions_per_year">%1$s%2$s/tahun</string>
+  <string name="subscriptions_per_day">%1$s/day</string>
+  <string name="subscriptions_per_week">%1$s/week</string>
+  <string name="subscriptions_per_month">%1$s/month</string>
+  <string name="subscriptions_per_year">%1$s/year</string>
+  <string name="subscriptions_per_several_day">%1$s every %2$s days</string>
+  <string name="subscriptions_per_several_week">%1$s every %2$s weeks</string>
+  <string name="subscriptions_per_several_month">%1$s every %2$s months</string>
+  <string name="subscriptions_per_several_year">%1$s every %2$s years</string>
   <!--New Gamification-->
   <string name="gamif_title">Bonus sehingga %s%%!</string>
   <string name="gamif_bonus_received">Bonus diterima</string>
@@ -758,7 +774,7 @@
   <string name="carrier_billing_fees_disclaimer">Bayaran tambahan mungkin dikenakan</string>
   <string name="carrier_billing_insert_phone_body">Sila masukkan nombor telefon anda</string>
   <string name="carrier_billing_phone_field">Nombor telefon anda...</string>
-  <string name="carrier_billing_carrier_fees_body">A %1$s fee will be charged</string>
+  <string name="carrier_billing_carrier_fees_body">Yuran %1$s akan dikenakan</string>
   <string name="carrier_billing_purchase_info_body">%1$s dalam %2$s.</string>
   <string name="carrier_billing_phone_confirmation_body">Nombor telefon anda ialah %s.</string>
   <string name="carrier_billing_enter_pin_body">Sila masukkan PIN yang diterima melalui SMS.</string>
@@ -831,11 +847,13 @@
   <string name="rate_us_possitive_thanks_body">Kami berbesar hati anda suka dengan aplikasi kami. Boleh bantu kami dengan beri rating di gedung aplikasi?</string>
   <string name="rate_us_possitive_rate_button">NILAI DOMPET APPCOINS</string>
   <string name="rate_us_possitive_done_title">Terima kasih atas maklum balas anda!</string>
+  <string name="rate_us_back_title">Nak bantu kami?</string>
+  <string name="rate_us_back_body">Nilai Dompet AppCoins di gedung aplikasi supaya kami boleh tambah baik.</string>
   <!--Card verification-->
   <string name="card_verification_body">Gunakan kad debit/kredit untuk sahkan dompet anda.</string>
   <string name="card_verification_charde_disclaimer">Kami akan mengenakan bayaran %s pada kad anda, dan kami akan kembalikannya setelah anda sahkan kod.</string>
   <string name="card_verification_code_title">Semak kod pada butiran transaksi</string>
-  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issuer.</string>
+  <string name="card_verification_code_body">Kod unik akan terpapar pada rumusan transaksi yang disediakan oleh pengeluar kad anda.</string>
   <string name="card_verification_code_example_title">Contoh Ringkasan Transaksi</string>
   <string name="card_verification_code_example_date">Tarikh transaksi</string>
   <string name="card_verification_code_example_description">Keterangan</string>
@@ -853,6 +871,8 @@
   <string name="card_verification_wallets_one_step_title">Satu lagi langkah untuk pengesahan</string>
   <string name="card_verification_wallets_one_step_body">Masukkan kod yang tertera pada butiran transaksi.</string>
   <string name="card_verification_wallets_insert_bode_button">Masukkan kod</string>
+  <string name="card_verification_no_attempts_title">Oops, you\'ve inserted a wrong code too many times so %1$s will be refunded to your card.</string>
+  <string name="card_verification_no_attempts_body">Please, start the verification process again.</string>
   <!--Vouchers-->
   <string name="voucher_card_body">Beli baucar ini dan dapat bonus sehingga %s%%.</string>
   <string name="voucher_buy_header">Baucar untuk %s</string>
@@ -861,4 +881,6 @@
   <string name="voucher_code_title">Kod Baucar</string>
   <string name="voucher_instructions_body">Pergi ke %s dan gunakan kod untuk menebus baucar anda.</string>
   <string name="voucher_instructions_transactions">Anda boleh lihat kod baucar dalam sejarah transaksi.</string>
+  <string name="voucher_empty">Tiada baucar buat masa ini.</string>
+  <string name="voucher_tooltip">Anda kini boleh beli baucar untuk permainan!</string>
 </resources>
