--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -5,6 +5,8 @@
   <string name="title_send_with_token">Enviar %s</string>
   <string name="title_request">Receber</string>
   <string name="title_import">Recuperar Wallet</string>
+  <!--Bottom navigation-->
+  <string name="bottom_navigation_my_wallets">Minhas Wallets</string>
   <!-- Strings relatedwalletount creation -->
   <string name="prompt_password">Senha</string>
   <string name="action_sign_in_short">Create</string>
@@ -333,7 +335,12 @@
   <string name="gamification_leveled_up_body">Você agora receberá um bônus de %s a cada compra. Continue comprando para ganhar ainda mais!</string>
   <string name="gamification_leveled_up_notification_title">Você passou de nível!</string>
   <string name="gamification_leveled_up_notification_body">Parabéns, você receberá agora um bônus de %s a cada compra!</string>
-  <string name="gamification_how_max_level_body">Parabéns! Você chegou ao nível mais alto 💃</string>
+  <string name="gamification_how_max_level_notification_title">Você Conseguiu!</string>
+  <string name="gamification_how_max_level_body">Você chegou ao nível máximo: %s de bônus em cada compra!</string>
+  <string name="gamification_level_up_notification_title">Quase lá!</string>
+  <string name="gamification_level_up_notification_body">Gaste mais %s AppCoins para chegar ao próximo nível.</string>
+  <string name="gamification_bonus_plus_perk_title">Você recebeu um bônus extra!</string>
+  <string name="gamification_bonus_plus_perk_body">Aproveite um bônus de %1$s e %2$s Créditos AppCoins extras.</string>
   <!-- Provide wallet address -->
   <string name="provide_wallet_body">Permitir que a AppCoins Wallet forneça o endereço de sua wallet para %s.</string>
   <string name="provide_wallet_body_placeholders">Permitir que a %1$s forneça o endereço da sua wallet para %2$s.</string>
@@ -410,7 +417,7 @@
   <string name="password">Senha</string>
   <string name="repeat_password">Repetir senha</string>
   <string name="turn_on_button">Ativar</string>
-  <string name="no_thanks_button">No, thanks</string>
+  <string name="no_thanks_button">Não, obrigado</string>
   <string name="remind_later_button">Lembrar depois</string>
   <string name="get_code_button">Receber código</string>
   <string name="confirm_button">Confirmar</string>
@@ -499,7 +506,9 @@
   <string name="purchase_error_wallet_block_code_403">Parece que algo não está certo com sua wallet. Por favor, entre em contato conosco.</string>
   <string name="purchase_card_error_CVV">CVV/CVC errado</string>
   <string name="error_contac_us_body">Se o problema persistir, entre em contato conosco.</string>
-  <string name="purchase_error_unverified_wallet">Try to complete the purchase after verifying your wallet.</string>
+  <string name="purchase_error_unverified_wallet">Tente completar a compra após verificar a sua wallet.</string>
+  <string name="purchase_error_try_other_method">Opa&#8230; Algo deu errado! Tente novamente com um método de pagamento diferente ou entre em contato com a gente.</string>
+  <string name="purchase_error_try_other_amount">Você tem certeza de que o valor de recarga está certo? Por favor, tente uma quantia diferente ou entre em contato conosco!</string>
   <!--Billing address in purchase flow-->
   <string name="purchase_address_title">Endereço de cobrança</string>
   <string name="purchase_address_address_field">Endereço</string>
@@ -559,8 +568,11 @@
   <string name="promotions_tab_poa_title">JOGUE E GANHE</string>
   <string name="promotions_empty_promotions_body">Não há promoções disponíveis no momento. Volte mais tarde!</string>
   <string name="promotions_empty_poa_body">Não há apps com recompensas disponíveis no momento. Volte mais tarde!</string>
+  <string name="promotions_empty_first_purchase_body">Faça sua primeira compra em um jogo ou app para liberar as promoções que preparamos para você!</string>
+  <string name="promotions_empty_suggested_games_title">Jogos Sugeridos</string>
   <string name="promotions_perks_button">Benefícios</string>
   <string name="promotions_vouhers_button">Vouchers</string>
+  <string name="promotions_tooltip">Ganhe Créditos AppCoins com nossas promoções!</string>
   <!--Update-->
   <string name="update_wallet_poa_notification_title">Atualize para receber recompensas</string>
   <string name="update_wallet_poa_notification_body">Por favor, atualize sua Wallet AppCoins para receber esta recompensa.</string>
@@ -692,7 +704,7 @@
   <string name="subscriptions_canceled_body">Cancelada</string>
   <string name="subscriptions_details_disclaimer">O valor em AppCoins pode variar no próximo pagamento devido à taxa de câmbio.</string>
   <string name="subscriptions_details_button">DETALHES</string>
-  <string name="subscriptions_manage_button">GERENCIAR ASSINATURA</string>
+  <string name="subscriptions_manage_button">MANAGE SUBSCRIPTIONS</string>
   <string name="subscriptions_cancel_button">CANCELAR ASSINATURA</string>
   <string name="subscriptions_cancel_title">Cancelar Assinatura</string>
   <string name="subscriptions_cancel_body">Tem certeza de que deseja cancelar esta assinatura?</string>
@@ -702,10 +714,14 @@
   <string name="subscriptions_cancel_confirmation_body">Você não será mais cobrado por esta assinatura e poderá usá-la até %s.</string>
   <string name="subscriptions_category_title">Assinatura</string>
   <string name="subscriptions_bonus_body">Você receberá esse bônus em cada pagamento.</string>
-  <string name="subscriptions_per_day">%1$s%2$s/dia</string>
-  <string name="subscriptions_per_week">%1$s%2$s/semana</string>
-  <string name="subscriptions_per_month">%1$s%2$s/mês</string>
-  <string name="subscriptions_per_year">%1$s%2$s/ano</string>
+  <string name="subscriptions_per_day">%1$s/day</string>
+  <string name="subscriptions_per_week">%1$s/week</string>
+  <string name="subscriptions_per_month">%1$s/month</string>
+  <string name="subscriptions_per_year">%1$s/year</string>
+  <string name="subscriptions_per_several_day">%1$s every %2$s days</string>
+  <string name="subscriptions_per_several_week">%1$s every %2$s weeks</string>
+  <string name="subscriptions_per_several_month">%1$s every %2$s months</string>
+  <string name="subscriptions_per_several_year">%1$s every %2$s years</string>
   <!--New Gamification-->
   <string name="gamif_title">Receba até %s%% de Bônus!</string>
   <string name="gamif_bonus_received">Bônus recebido</string>
@@ -759,7 +775,7 @@
   <string name="carrier_billing_fees_disclaimer">Podem ser aplicadas taxas adicionais</string>
   <string name="carrier_billing_insert_phone_body">Insira seu número de telefone</string>
   <string name="carrier_billing_phone_field">Seu número de telefone...</string>
-  <string name="carrier_billing_carrier_fees_body">A %1$s fee will be charged</string>
+  <string name="carrier_billing_carrier_fees_body">Uma taxa de %1$s será cobrada</string>
   <string name="carrier_billing_purchase_info_body">%1$s em %2$s.</string>
   <string name="carrier_billing_phone_confirmation_body">Seu número de telefone é %s.</string>
   <string name="carrier_billing_enter_pin_body">Digite o PIN recebido via SMS.</string>
@@ -835,11 +851,13 @@
   <string name="rate_us_possitive_thanks_body">Estamos felizes por gostar de nosso app. Você poderia nos ajudar avaliando-nos na app store?</string>
   <string name="rate_us_possitive_rate_button">AVALIE O APPCOINS WALLET</string>
   <string name="rate_us_possitive_done_title">Obrigado pelo seu feedback!</string>
+  <string name="rate_us_back_title">Gostaria de nos ajudar?</string>
+  <string name="rate_us_back_body">Avalie o AppCoins Wallet na app store para que possamos melhorá-lo.</string>
   <!--Card verification-->
   <string name="card_verification_body">Utilize seu cartão de crédito/débito para verificar sua wallet.</string>
   <string name="card_verification_charde_disclaimer">Cobraremos %s em seu cartão, que será reembolsado assim que você confirmar o código.</string>
   <string name="card_verification_code_title">Verifique o código nos detalhes da transação</string>
-  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issuer.</string>
+  <string name="card_verification_code_body">Um código único será exibido no resumo da transação fornecido pelo emissor do seu cartão.</string>
   <string name="card_verification_code_example_title">Exemplo de Resumo de Transação</string>
   <string name="card_verification_code_example_date">Data da Transação</string>
   <string name="card_verification_code_example_description">Descrição</string>
@@ -859,6 +877,8 @@
   <string name="card_verification_wallets_one_step_title">Mais uma etapa para validar</string>
   <string name="card_verification_wallets_one_step_body">Insira o código que aparece nos detalhes da transação.</string>
   <string name="card_verification_wallets_insert_bode_button">Inserir código</string>
+  <string name="card_verification_no_attempts_title">Oops, you\'ve inserted a wrong code too many times so %1$s will be refunded to your card.</string>
+  <string name="card_verification_no_attempts_body">Please, start the verification process again.</string>
   <!--Vouchers-->
   <string name="voucher_card_body">Compre este voucher e receba até %s%% de bônus.</string>
   <string name="voucher_buy_header">Voucher para %s</string>
@@ -867,4 +887,6 @@
   <string name="voucher_code_title">Código do Voucher</string>
   <string name="voucher_instructions_body">Acesse %s e use o código para resgatar seu voucher.</string>
   <string name="voucher_instructions_transactions">Você sempre encontrará o código do voucher no histórico de transações.</string>
+  <string name="voucher_empty">Nenhum voucher disponível no momento.</string>
+  <string name="voucher_tooltip">Você agora pode comprar vouchers para os jogos!</string>
 </resources>
