--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -5,6 +5,8 @@
   <string name="title_send_with_token">Enviar %s</string>
   <string name="title_request">Receber</string>
   <string name="title_import">Recuperar Wallet</string>
+  <!--Bottom navigation-->
+  <string name="bottom_navigation_my_wallets">Wallets</string>
   <!-- Strings relatedwalletount creation -->
   <string name="prompt_password">Password</string>
   <string name="action_sign_in_short">Create</string>
@@ -333,7 +335,12 @@
   <string name="gamification_leveled_up_body">Irás receber um bónus de %s em cada compra. Continua a comprar para ganhar ainda mais!</string>
   <string name="gamification_leveled_up_notification_title">Chegaste ao próximo nível!</string>
   <string name="gamification_leveled_up_notification_body">Parabéns, agora irás receber um bónus de %s em cada compra!</string>
-  <string name="gamification_how_max_level_body">Parabéns! Chegaste ao nível mais alto 💃</string>
+  <string name="gamification_how_max_level_notification_title">Conseguiste!</string>
+  <string name="gamification_how_max_level_body">Atingiste o nível mais alto: %s de Bónus em cada compra!</string>
+  <string name="gamification_level_up_notification_title">Quase lá!</string>
+  <string name="gamification_level_up_notification_body">Gasta mais %s AppCoins para chegar ao próximo nível.</string>
+  <string name="gamification_bonus_plus_perk_title">Tens um bónus extra!</string>
+  <string name="gamification_bonus_plus_perk_body">Aproveita um bónus de %1$s e %2$s AppCoins Credits extra.</string>
   <!-- Provide wallet address -->
   <string name="provide_wallet_body">Permitir que a Wallet da AppCoins forneça o endereço da tua wallet para %s.</string>
   <string name="provide_wallet_body_placeholders">Permite que a %1$s forneça o teu endereço wallet a %2$s.</string>
@@ -410,7 +417,7 @@
   <string name="password">Password</string>
   <string name="repeat_password">Repetir password</string>
   <string name="turn_on_button">Ligar</string>
-  <string name="no_thanks_button">No, thanks</string>
+  <string name="no_thanks_button">Não, obrigado</string>
   <string name="remind_later_button">Lembra-me mais tarde</string>
   <string name="get_code_button">Obter código</string>
   <string name="confirm_button">Confirmar</string>
@@ -499,7 +506,9 @@
   <string name="purchase_error_wallet_block_code_403">Parece que algo não está ok com a tua wallet. Por favor, entra em contacto connosco.</string>
   <string name="purchase_card_error_CVV">CVV/CVC errado</string>
   <string name="error_contac_us_body">Se o problema persistir entra em contacto connosco.</string>
-  <string name="purchase_error_unverified_wallet">Try to complete the purchase after verifying your wallet.</string>
+  <string name="purchase_error_unverified_wallet">Tenta completar a compra após verificares a tua wallet.</string>
+  <string name="purchase_error_try_other_method">Ups&#8230; Algo está a acontecer! Por favor tenta com um método de pagamento diferente ou contacta-nos.</string>
+  <string name="purchase_error_try_other_amount">Tens a certeza de que o teu montante de recarga está correto? Por favor tenta com um diferente ou contacta-nos!</string>
   <!--Billing address in purchase flow-->
   <string name="purchase_address_title">Morada de faturação</string>
   <string name="purchase_address_address_field">Morada</string>
@@ -559,8 +568,11 @@
   <string name="promotions_tab_poa_title">JOGAR &amp; GANHAR</string>
   <string name="promotions_empty_promotions_body">Não há promoções disponíveis de momento. Volta mais tarde!</string>
   <string name="promotions_empty_poa_body">Não há apps com recompensas disponíveis de momento. Volta mais tarde!</string>
+  <string name="promotions_empty_first_purchase_body">Faz a tua primeira compra num jogo ou app e desbloqueia as promoções que temos para ti!</string>
+  <string name="promotions_empty_suggested_games_title">Jogos Sugeridos</string>
   <string name="promotions_perks_button">Benefícios</string>
   <string name="promotions_vouhers_button">Vouchers</string>
+  <string name="promotions_tooltip">Ganha AppCoins Credits grátis com as nossas promoções!</string>
   <!--Update-->
   <string name="update_wallet_poa_notification_title">Faz a atualização para receberes recompensas</string>
   <string name="update_wallet_poa_notification_body">Por favor atualiza a AppCoins Wallet para receberes esta recompensa.</string>
@@ -692,7 +704,7 @@
   <string name="subscriptions_canceled_body">Cancelado</string>
   <string name="subscriptions_details_disclaimer">O valor em AppCoins pode variar para o próximo pagamento devido à taxa de câmbio.</string>
   <string name="subscriptions_details_button">DETALHES</string>
-  <string name="subscriptions_manage_button">GERIR SUBSCRIÇÃO</string>
+  <string name="subscriptions_manage_button">MANAGE SUBSCRIPTIONS</string>
   <string name="subscriptions_cancel_button">CANCELAR SUBSCRIÇÃO</string>
   <string name="subscriptions_cancel_title">Cancelar Subscrição</string>
   <string name="subscriptions_cancel_body">Tens a certeza de que queres cancelar esta subscrição?</string>
@@ -702,10 +714,14 @@
   <string name="subscriptions_cancel_confirmation_body">Não serás mais cobrado por esta subscrição e podes usá-la até %s.</string>
   <string name="subscriptions_category_title">Subscrição</string>
   <string name="subscriptions_bonus_body">Vais receber este bónus em cada pagamento.</string>
-  <string name="subscriptions_per_day">%1$s%2$s/dia</string>
-  <string name="subscriptions_per_week">%1$s%2$s/semana</string>
-  <string name="subscriptions_per_month">%1$s%2$s/mês</string>
-  <string name="subscriptions_per_year">%1$s%2$s/ano</string>
+  <string name="subscriptions_per_day">%1$s/day</string>
+  <string name="subscriptions_per_week">%1$s/week</string>
+  <string name="subscriptions_per_month">%1$s/month</string>
+  <string name="subscriptions_per_year">%1$s/year</string>
+  <string name="subscriptions_per_several_day">%1$s every %2$s days</string>
+  <string name="subscriptions_per_several_week">%1$s every %2$s weeks</string>
+  <string name="subscriptions_per_several_month">%1$s every %2$s months</string>
+  <string name="subscriptions_per_several_year">%1$s every %2$s years</string>
   <!--New Gamification-->
   <string name="gamif_title">Até %s%% de Bónus!</string>
   <string name="gamif_bonus_received">Bónus recebido</string>
@@ -759,7 +775,7 @@
   <string name="carrier_billing_fees_disclaimer">Podem ser aplicadas taxas adicionais</string>
   <string name="carrier_billing_insert_phone_body">Insere o teu número de telemóvel</string>
   <string name="carrier_billing_phone_field">O teu número de telemóvel...</string>
-  <string name="carrier_billing_carrier_fees_body">A %1$s fee will be charged</string>
+  <string name="carrier_billing_carrier_fees_body">Será cobrada uma taxa de %1$s</string>
   <string name="carrier_billing_purchase_info_body">%1$s em %2$s.</string>
   <string name="carrier_billing_phone_confirmation_body">O teu número de telemóvel é %s.</string>
   <string name="carrier_billing_enter_pin_body">Digita o PIN que recebeste por SMS.</string>
@@ -835,11 +851,13 @@
   <string name="rate_us_possitive_thanks_body">Estamos contentes por gostares da nossa app. Podes ajudar-nos, classificando-nos na loja de apps?</string>
   <string name="rate_us_possitive_rate_button">AVALIA A APPCOINS WALLET</string>
   <string name="rate_us_possitive_done_title">Obrigado pela tua opinião!</string>
+  <string name="rate_us_back_title">Queres ajudar-nos?</string>
+  <string name="rate_us_back_body">Avalia a AppCoins Wallet na loja de apps para que possamos melhorá-la.</string>
   <!--Card verification-->
   <string name="card_verification_body">Usa o teu cartão de crédito/débito para verificar a tua wallet.</string>
   <string name="card_verification_charde_disclaimer">Vamos cobrar %s no teu cartão, e devolvemos assim que confirmares o código.</string>
   <string name="card_verification_code_title">Verifica o código nos detalhes da transação</string>
-  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issuer.</string>
+  <string name="card_verification_code_body">Um código exclusivo fornecido pelo emissor teu cartão irá aparecer no resumo da transação.</string>
   <string name="card_verification_code_example_title">Exemplo do Resumo das Transações</string>
   <string name="card_verification_code_example_date">Data de Trans.</string>
   <string name="card_verification_code_example_description">Descrição</string>
@@ -859,6 +877,8 @@
   <string name="card_verification_wallets_one_step_title">Mais um passo para validar</string>
   <string name="card_verification_wallets_one_step_body">Insere o código que aparece nos detalhes da transação.</string>
   <string name="card_verification_wallets_insert_bode_button">Inserir código</string>
+  <string name="card_verification_no_attempts_title">Oops, you\'ve inserted a wrong code too many times so %1$s will be refunded to your card.</string>
+  <string name="card_verification_no_attempts_body">Please, start the verification process again.</string>
   <!--Vouchers-->
   <string name="voucher_card_body">Compra este voucher e recebe até %s%% de bónus.</string>
   <string name="voucher_buy_header">Voucher para %s</string>
@@ -867,4 +887,6 @@
   <string name="voucher_code_title">Código do Voucher</string>
   <string name="voucher_instructions_body">Vai a %s e usa o código para receberes o teu voucher.</string>
   <string name="voucher_instructions_transactions">Podes sempre encontrar o código do voucher no histórico de transações.</string>
+  <string name="voucher_empty">De momento não há vouchers disponíveis.</string>
+  <string name="voucher_tooltip">Podes comprar agora vouchers para jogos!</string>
 </resources>
