--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -5,6 +5,8 @@
   <string name="title_send_with_token">ส่ง %s</string>
   <string name="title_request">ได้รับ</string>
   <string name="title_import">กู้คืน Wallet</string>
+  <!--Bottom navigation-->
+  <string name="bottom_navigation_my_wallets">กระเป๋าเงินของฉัน</string>
   <!-- Strings relatedwalletount creation -->
   <string name="prompt_password">รหัสผ่าน</string>
   <string name="action_sign_in_short">Create</string>
@@ -333,7 +335,12 @@
   <string name="gamification_leveled_up_body">คุณจะได้รับโบนัส %s ในทุกการซื้อ ซื้อย่างต่อเนื่องเพื่อรับมากขึ้น!</string>
   <string name="gamification_leveled_up_notification_title">คุณถึงเลเวลถัดไป!</string>
   <string name="gamification_leveled_up_notification_body">ยินดีด้วย คุณจะรับโบนัส %s ในทุกการซื้อขาย!</string>
-  <string name="gamification_how_max_level_body">ยินดีด้วย! คุณถึงเลเวลสูงสุดแล้ว!</string>
+  <string name="gamification_how_max_level_notification_title">คุณทำสำเร็จ!</string>
+  <string name="gamification_how_max_level_body">คุณถึงระดับสูงสุดแล้ว: %s โบนัสสำหรับทุกการซื้อ!</string>
+  <string name="gamification_level_up_notification_title">เกือบเสร็จแล้ว!</string>
+  <string name="gamification_level_up_notification_body">ใช้ %s AppCoins เพื่อถึงระดับถัดไป</string>
+  <string name="gamification_bonus_plus_perk_title">คุณมีโบนัสพิเศษ!</string>
+  <string name="gamification_bonus_plus_perk_body">รับโบนัส%1$sและเครดิต AppCoins พิเศษอีก%2$s</string>
   <!-- Provide wallet address -->
   <string name="provide_wallet_body">อนุญาตให้ AppCoins Wallet เพื่อให้กระเป๋าสตางค์ที่อยู่ %s</string>
   <string name="provide_wallet_body_placeholders">อนุญาตให้ %1$s ที่อยู่กระเป๋าสตางค์ %2$s</string>
@@ -500,6 +507,8 @@
   <string name="purchase_card_error_CVV">CVV/CVC ไม่ถูกต้อง</string>
   <string name="error_contac_us_body">โปรดติดต่อเราหากยังคงมีปัญหา</string>
   <string name="purchase_error_unverified_wallet">ลองดำเนินการซื้อหลังจากยืนยันกระเป๋าเงินของคุณ</string>
+  <string name="purchase_error_try_other_method">อ๊ะ &#8230; มีบางอย่างเกิดขึ้น! โปรดลองใช้วิธีการชำระเงินอื่นหรือติดต่อเรา</string>
+  <string name="purchase_error_try_other_amount">คุณแน่ใจหรือไม่ว่าจำนวนการเติมเงินของคุณถูกต้อง? โปรดลองโดยใช้หมายเลขอื่นหรือติดต่อเรา!</string>
   <!--Billing address in purchase flow-->
   <string name="purchase_address_title">ที่อยู่เรียกเก็บเงิน</string>
   <string name="purchase_address_address_field">ที่อยู่</string>
@@ -559,8 +568,13 @@
   <string name="promotions_tab_poa_title">เล่น &amp; รับ</string>
   <string name="promotions_empty_promotions_body">ไม่มีโปรโมชันที่ใช้ได้ในขณะนี้ โปรดกลับมาภายหลัง!</string>
   <string name="promotions_empty_poa_body">ในขณะนี้ไม่มีแอปที่มีรางวัล โปรดกลับมาในภายหลัง!</string>
+  <string name="promotions_empty_first_purchase_body">ทำการซื้อครั้งแรกในเกม
+หรือแอพและปลดล็อก
+โปรโมชั่นที่เรามีให้คุณ!</string>
+  <string name="promotions_empty_suggested_games_title">เกมส์ที่แนะนำ</string>
   <string name="promotions_perks_button">สิทธิประโยชน์</string>
   <string name="promotions_vouhers_button">เวาเชอร์</string>
+  <string name="promotions_tooltip">รับเครดิต AppCoins ฟรีด้วยโปรโมชั่นของเรา!</string>
   <!--Update-->
   <string name="update_wallet_poa_notification_title">อัพเดตเพื่อรับรางวัล</string>
   <string name="update_wallet_poa_notification_body">โปรดอัปเดต AppCoins Wallet เพื่อรับรางวัลนี้</string>
@@ -691,7 +705,7 @@
   <string name="subscriptions_canceled_body">ยกเลิก</string>
   <string name="subscriptions_details_disclaimer">มูลค่าใน AppCoins อาจเปลี่ยนแปลงสำหรับการชำระเงินครั้งถัดไปซึ่งขึ้นอยู่กับอัตราแลกเปลี่ยน</string>
   <string name="subscriptions_details_button">รายละเอียด</string>
-  <string name="subscriptions_manage_button">จัดการการสมัครสมาชิก</string>
+  <string name="subscriptions_manage_button">MANAGE SUBSCRIPTIONS</string>
   <string name="subscriptions_cancel_button">ยกเลิกสมาชิก</string>
   <string name="subscriptions_cancel_title">ยกเลิกสมาชิก</string>
   <string name="subscriptions_cancel_body">คุณแน่ใจใช่ไหมว่าต้องการยกเลิกการเป็นสมาชิกนี้</string>
@@ -701,10 +715,14 @@
   <string name="subscriptions_cancel_confirmation_body">คุณจะไม่โดนเรียกเก็บเงินใดๆสำหรับการเป็นสมาชิกนี้ และคุณสามารถใช้ได้ถึง %s</string>
   <string name="subscriptions_category_title">สมัครสมาชิก</string>
   <string name="subscriptions_bonus_body">คุณจะได้รับโบนัสนี้สำหรับทุกการชำระเงิน</string>
-  <string name="subscriptions_per_day">%1$s%2$s/วัน</string>
-  <string name="subscriptions_per_week">%1$s%2$s/สัปดาห์</string>
-  <string name="subscriptions_per_month">%1$s%2$s/เดือน</string>
-  <string name="subscriptions_per_year">%1$s%2$s/ปี</string>
+  <string name="subscriptions_per_day">%1$s/day</string>
+  <string name="subscriptions_per_week">%1$s/week</string>
+  <string name="subscriptions_per_month">%1$s/month</string>
+  <string name="subscriptions_per_year">%1$s/year</string>
+  <string name="subscriptions_per_several_day">%1$s every %2$s days</string>
+  <string name="subscriptions_per_several_week">%1$s every %2$s weeks</string>
+  <string name="subscriptions_per_several_month">%1$s every %2$s months</string>
+  <string name="subscriptions_per_several_year">%1$s every %2$s years</string>
   <!--New Gamification-->
   <string name="gamif_title">โบนัสสูงสุด %s%%</string>
   <string name="gamif_bonus_received">โบนัสที่ได้รับ</string>
@@ -758,7 +776,7 @@
   <string name="carrier_billing_fees_disclaimer">อาจมีค่าใช้จ่ายเพิ่มเติม</string>
   <string name="carrier_billing_insert_phone_body">โปรดใส่เบอร์โทรศัพท์ของคุณ</string>
   <string name="carrier_billing_phone_field">เบอร์โทรศัพท์ของคุณ...</string>
-  <string name="carrier_billing_carrier_fees_body">A %1$s fee will be charged</string>
+  <string name="carrier_billing_carrier_fees_body">จะมีการเรียกเก็บค่าธรรมเนียม %1$s</string>
   <string name="carrier_billing_purchase_info_body">%1$sใน%2$s</string>
   <string name="carrier_billing_phone_confirmation_body">เบอร์โทรศัพท์ของคุณคือ%s</string>
   <string name="carrier_billing_enter_pin_body">โปรดใส่ PIN ที่ได้รับทาง SMS</string>
@@ -831,6 +849,8 @@
   <string name="rate_us_possitive_thanks_body">เราดีใจที่คุณชอบแอปของเรา คุณสามารถช่วยเราโดยการให้คะแนนเราบน App Store ได้หรือไม่</string>
   <string name="rate_us_possitive_rate_button">ให้คะแนนกระเป๋าเงิน APPCOINS</string>
   <string name="rate_us_possitive_done_title">ขอบคุณสำหรับคำติชม!</string>
+  <string name="rate_us_back_title">ต้องการความช่วยเหลือไหม</string>
+  <string name="rate_us_back_body">ให้คะแนน AppCoins Wallet บนแอพสโตร์เพื่อให้เราปรับปรุง</string>
   <!--Card verification-->
   <string name="card_verification_body">ใช้บัตรเครดิต / เดบิตเพื่อยืนยันกระเป๋าเงินของคุณ</string>
   <string name="card_verification_charde_disclaimer">เราจะเรียกเก็บเงิน %s จากบัตรของคุณและเราจะคืนเงินให้ เมื่อคุณยืนยันรหัส</string>
@@ -853,6 +873,8 @@
   <string name="card_verification_wallets_one_step_title">ตรวจสอบความถูกต้องอีกหนึ่งขั้นตอน</string>
   <string name="card_verification_wallets_one_step_body">ใส่รหัสที่ปรากฏในรายละเอียดธุรกรรม</string>
   <string name="card_verification_wallets_insert_bode_button">ใส่รหัส</string>
+  <string name="card_verification_no_attempts_title">Oops, you\'ve inserted a wrong code too many times so %1$s will be refunded to your card.</string>
+  <string name="card_verification_no_attempts_body">Please, start the verification process again.</string>
   <!--Vouchers-->
   <string name="voucher_card_body">ซื้อบัตรกำนัลนี้และรับโบนัสสูงสุด %s%%</string>
   <string name="voucher_buy_header">บัตรกำนัลสำหรับ %s</string>
@@ -861,4 +883,6 @@
   <string name="voucher_code_title">รหัสเวาเชอร์</string>
   <string name="voucher_instructions_body">ไปที่%sและใช้รหัส เพื่อแลกใช้เวาเชอร์ของคุณ</string>
   <string name="voucher_instructions_transactions">คุณสามารถค้นหารหัสเวาเชอร์ได้ตลอดเวลาในประวัติการทำธุรกรรม</string>
+  <string name="voucher_empty">ไม่มีเวาเชอร์ในขณะนี้</string>
+  <string name="voucher_tooltip">ตอนนี้คุณสามารถซื้อเวาเชอร์สำหรับเกมได้แล้ว</string>
 </resources>
