--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -5,6 +5,8 @@
   <string name="title_send_with_token">%s gönder</string>
   <string name="title_request">Al</string>
   <string name="title_import">Cüzdanı geri yükle</string>
+  <!--Bottom navigation-->
+  <string name="bottom_navigation_my_wallets">Cüzdanlarım</string>
   <!-- Strings relatedwalletount creation -->
   <string name="prompt_password">Şifre</string>
   <string name="action_sign_in_short">Create</string>
@@ -333,7 +335,12 @@
   <string name="gamification_leveled_up_body">Her bir satın alma işlemi için %s bonus alacaksınız. Daha da fazla kazanmak için satın almaya devam edin!</string>
   <string name="gamification_leveled_up_notification_title">Bir sonraki seviyeye ulaştınız!</string>
   <string name="gamification_leveled_up_notification_body">Tebrikler, artık her bir satın alma işleminde %s bonus kazanacaksınız!</string>
-  <string name="gamification_how_max_level_body">Tebrikler! En üst seviyeye ulaştınız 💃</string>
+  <string name="gamification_how_max_level_notification_title">Başardınız!</string>
+  <string name="gamification_how_max_level_body">En yüksek seviyeye ulaştınız: Her satın alma işleminde %s Bonus!</string>
+  <string name="gamification_level_up_notification_title">Neredeyse bitti!</string>
+  <string name="gamification_level_up_notification_body">Sonraki seviyeye ulaşmak için %s AppCoins daha harcayın.</string>
+  <string name="gamification_bonus_plus_perk_title">Ekstra bonus kazandınız!</string>
+  <string name="gamification_bonus_plus_perk_body">Ekstra %1$s bonus ve %2$s AppCoins Credits\'in keyfini çıkarın.</string>
   <!-- Provide wallet address -->
   <string name="provide_wallet_body">AppCoins Cüzdanın %s\'e cüzdan adresinizi vermesine izin verin.</string>
   <string name="provide_wallet_body_placeholders">%1$s\'ın %2$s\'e cüzdan adresinizi vermesine izin verin.</string>
@@ -410,7 +417,7 @@
   <string name="password">Şifre</string>
   <string name="repeat_password">Şifreyi tekrarlayın</string>
   <string name="turn_on_button">Aç</string>
-  <string name="no_thanks_button">No, thanks</string>
+  <string name="no_thanks_button">Hayır, teşekkürler</string>
   <string name="remind_later_button">Daha sonra hatırlat</string>
   <string name="get_code_button">Kod al</string>
   <string name="confirm_button">Doğrula</string>
@@ -499,7 +506,9 @@
   <string name="purchase_error_wallet_block_code_403">Cüzdanınızla ilgili bir sorun var gibi görünüyor. Lütfen bizimle iletişime geçin.</string>
   <string name="purchase_card_error_CVV">Yanlış CVV/CVC</string>
   <string name="error_contac_us_body">Sorun devam ederse lütfen bizimle iletişime geçin.</string>
-  <string name="purchase_error_unverified_wallet">Try to complete the purchase after verifying your wallet.</string>
+  <string name="purchase_error_unverified_wallet">Cüzdanınızı doğruladıktan sonra satın alma işlemini tamamlamayı deneyin.</string>
+  <string name="purchase_error_try_other_method">Hay aksi&#8230; Bir şeyler oluyor! Lütfen farklı bir ödeme yöntemi deneyin veya bizimle iletişime geçin.</string>
+  <string name="purchase_error_try_other_amount">Yükleme miktarınızın doğru olduğundan emin misiniz? Lütfen farklı bir miktarla deneyin veya bizimle iletişime geçin!</string>
   <!--Billing address in purchase flow-->
   <string name="purchase_address_title">Faturalandırma adresi</string>
   <string name="purchase_address_address_field">Adres</string>
@@ -559,8 +568,11 @@
   <string name="promotions_tab_poa_title">OYNAYIN VE KAZANIN</string>
   <string name="promotions_empty_promotions_body">Şu anda kullanılabilir bir promosyon yok. Daha sonra tekrar uğrayın!</string>
   <string name="promotions_empty_poa_body">Şu anda kullanılabilir ödüllü bir uygulama yok. Daha sonra tekrar uğrayın!</string>
+  <string name="promotions_empty_first_purchase_body">Oyunda veya uygulamada ilk satın alma işleminizi gerçekleştirin ve sizin için hazırladığımız promosyonların kilidini açın!</string>
+  <string name="promotions_empty_suggested_games_title">Önerilen Oyunlar</string>
   <string name="promotions_perks_button">Avantajlar</string>
   <string name="promotions_vouhers_button">Kuponlar</string>
+  <string name="promotions_tooltip">Promosyonlarımızla ücretsiz AppCoins Credits kazanın!</string>
   <!--Update-->
   <string name="update_wallet_poa_notification_title">Ödül almak için güncelleyin</string>
   <string name="update_wallet_poa_notification_body">Bu ödülü almak için lütfen AppCoins Wallet\'ı güncelleyin.</string>
@@ -692,7 +704,7 @@
   <string name="subscriptions_canceled_body">İptal edildi</string>
   <string name="subscriptions_details_disclaimer">AppCoins cinsinden değeri, kur farklılıkları nedeniyle sonraki ödeme için farklılık gösterebilir.</string>
   <string name="subscriptions_details_button">AYRINTILAR</string>
-  <string name="subscriptions_manage_button">ABONELİĞİ YÖNETİN</string>
+  <string name="subscriptions_manage_button">MANAGE SUBSCRIPTIONS</string>
   <string name="subscriptions_cancel_button">ABONELİĞİ İPTAL EDİN</string>
   <string name="subscriptions_cancel_title">Aboneliği İptal Edin</string>
   <string name="subscriptions_cancel_body">Bu aboneliği iptal etmek istediğinizden emin misiniz?</string>
@@ -702,10 +714,14 @@
   <string name="subscriptions_cancel_confirmation_body">Bu abonelik için artık sizden ücret alınmayacak. Paketi %s tarihine kadar kullanabilirsiniz.</string>
   <string name="subscriptions_category_title">Abonelik</string>
   <string name="subscriptions_bonus_body">Her bir ödeme için bu bonusu alacaksınız.</string>
-  <string name="subscriptions_per_day">%1$s%2$s/gün</string>
-  <string name="subscriptions_per_week">%1$s%2$s/hafta</string>
-  <string name="subscriptions_per_month">%1$s%2$s/ay</string>
-  <string name="subscriptions_per_year">%1$s%2$s/yıl</string>
+  <string name="subscriptions_per_day">%1$s/day</string>
+  <string name="subscriptions_per_week">%1$s/week</string>
+  <string name="subscriptions_per_month">%1$s/month</string>
+  <string name="subscriptions_per_year">%1$s/year</string>
+  <string name="subscriptions_per_several_day">%1$s every %2$s days</string>
+  <string name="subscriptions_per_several_week">%1$s every %2$s weeks</string>
+  <string name="subscriptions_per_several_month">%1$s every %2$s months</string>
+  <string name="subscriptions_per_several_year">%1$s every %2$s years</string>
   <!--New Gamification-->
   <string name="gamif_title">%%%s oranına varan Bonus!</string>
   <string name="gamif_bonus_received">Alınan bonus</string>
@@ -759,7 +775,7 @@
   <string name="carrier_billing_fees_disclaimer">Ek ücretler uygulanabilir</string>
   <string name="carrier_billing_insert_phone_body">Lütfen telefon numaranızı girin</string>
   <string name="carrier_billing_phone_field">Telefon numaranız...</string>
-  <string name="carrier_billing_carrier_fees_body">A %1$s fee will be charged</string>
+  <string name="carrier_billing_carrier_fees_body">%1$s tutarında bir ücret alınacak</string>
   <string name="carrier_billing_purchase_info_body">%2$s uygulamasında %1$s.</string>
   <string name="carrier_billing_phone_confirmation_body">Telefon numaranız %s.</string>
   <string name="carrier_billing_enter_pin_body">Lütfen SMS yoluyla aldığınız PIN\'i girin.</string>
@@ -833,13 +849,15 @@
   <string name="rate_us_improve_field__empty_error">Lütfen bir şeyler yazın</string>
   <string name="rate_us_possitive_thanks_title">Teşekkürler!</string>
   <string name="rate_us_possitive_thanks_body">Uygulamamızı beğenmenize sevindik. App Store\'da değerlendirerek bize yardımcı olabilir misiniz?</string>
-  <string name="rate_us_possitive_rate_button">APPCOINS WALLET\'I DEĞERLENDİR</string>
+  <string name="rate_us_possitive_rate_button">APPCOINS WALLET\'I DEĞERLENDİRİN</string>
   <string name="rate_us_possitive_done_title">Geri bildiriminiz için teşekkürler!</string>
+  <string name="rate_us_back_title">Bize yardımcı olmak ister misiniz?</string>
+  <string name="rate_us_back_body">AppCoins Wallet\'ı iyileştirebilmemiz için uygulama mağazasında değerlendirin.</string>
   <!--Card verification-->
   <string name="card_verification_body">Cüzdanınızı doğrulamak için kredi/banka kartınızı kullanın.</string>
   <string name="card_verification_charde_disclaimer">Kartınızdan %s alınır ve kodu doğruladığımızda iade edilir.</string>
   <string name="card_verification_code_title">İşlem bilgilerin bilgilerinden kodu kontrol edin</string>
-  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issuer.</string>
+  <string name="card_verification_code_body">Kart sağlayıcınız tarafından sağlanan işlem özetinde eşsiz bir kod görünür.</string>
   <string name="card_verification_code_example_title">İşlem Özeti Örneği</string>
   <string name="card_verification_code_example_date">İşlem Tarihi</string>
   <string name="card_verification_code_example_description">Açıklama</string>
@@ -859,6 +877,8 @@
   <string name="card_verification_wallets_one_step_title">Doğrulamak için bir adım daha</string>
   <string name="card_verification_wallets_one_step_body">İşlem bilgilerinde görülen kodu girin.</string>
   <string name="card_verification_wallets_insert_bode_button">Kodu girin</string>
+  <string name="card_verification_no_attempts_title">Oops, you\'ve inserted a wrong code too many times so %1$s will be refunded to your card.</string>
+  <string name="card_verification_no_attempts_body">Please, start the verification process again.</string>
   <!--Vouchers-->
   <string name="voucher_card_body">Bu kuponu satın alın ve %%%s oranına varan bonus kazanın.</string>
   <string name="voucher_buy_header">%s kuponu</string>
@@ -867,4 +887,6 @@
   <string name="voucher_code_title">Kupon Kodu</string>
   <string name="voucher_instructions_body">%s adresine gidin ve kuponunuzu kullanmak için kodu kullanın.</string>
   <string name="voucher_instructions_transactions">Kupon kodunuza dilediğiniz zaman işlem geçmişinden ulaşabilirsiniz.</string>
+  <string name="voucher_empty">Şu anda uygun kupon yok.</string>
+  <string name="voucher_tooltip">Artık oyunlar için kupon satın alabilirsiniz!</string>
 </resources>
