--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -5,6 +5,8 @@
   <string name="title_send_with_token">Gửi %s</string>
   <string name="title_request">Nhận</string>
   <string name="title_import">Khôi phục ví</string>
+  <!--Bottom navigation-->
+  <string name="bottom_navigation_my_wallets">Ví của tôi</string>
   <!-- Strings relatedwalletount creation -->
   <string name="prompt_password">Mật khẩu</string>
   <string name="action_sign_in_short">Create</string>
@@ -333,7 +335,12 @@
   <string name="gamification_leveled_up_body">Kể từ giờ, bạn sẽ nhận được %s tiền thưởng trên mỗi lần mua. Hãy tiếp tục mua để nhận được nhiều hơn nữa!</string>
   <string name="gamification_leveled_up_notification_title">Bạn đã đạt đến cấp kế tiếp!</string>
   <string name="gamification_leveled_up_notification_body">Xin chúc mừng, giờ đây bạn sẽ nhận được tiền thưởng %s trên mỗi lần mua!</string>
-  <string name="gamification_how_max_level_body">Chúc mừng! Bạn đã đạt đến cấp cao nhất 💃</string>
+  <string name="gamification_how_max_level_notification_title">You Made It!</string>
+  <string name="gamification_how_max_level_body">You\'ve reached the highest level: %s Bonus on every purchase!</string>
+  <string name="gamification_level_up_notification_title">Gần xong rồi!</string>
+  <string name="gamification_level_up_notification_body">Dùng thêm %s AppCoins để đạt đến cấp kế tiếp.</string>
+  <string name="gamification_bonus_plus_perk_title">You\'ve got extra bonus!</string>
+  <string name="gamification_bonus_plus_perk_body">Enjoy a %1$s bonus and %2$s AppCoins Credits extra.</string>
   <!-- Provide wallet address -->
   <string name="provide_wallet_body">Cho phép AppCoins Wallet cung cấp địa chỉ ví của bạn cho %s.</string>
   <string name="provide_wallet_body_placeholders">Cho phép %1$s cung cấp địa chỉ ví của bạn cho %2$s.</string>
@@ -410,7 +417,7 @@
   <string name="password">Mật khẩu</string>
   <string name="repeat_password">Lặp lại mật khẩu</string>
   <string name="turn_on_button">Bật</string>
-  <string name="no_thanks_button">No, thanks</string>
+  <string name="no_thanks_button">Không, cảm ơn</string>
   <string name="remind_later_button">Nhắc lại sau</string>
   <string name="get_code_button">Lấy mã</string>
   <string name="confirm_button">Xác nhận</string>
@@ -499,7 +506,9 @@
   <string name="purchase_error_wallet_block_code_403">Có vẻ như có gì đó không ổn với ví của bạn. Xin vui lòng liên hệ ngay với chúng tôi.</string>
   <string name="purchase_card_error_CVV">CVV/CVC sai</string>
   <string name="error_contac_us_body">Nếu vấn đề vẫn không được khắc phục, vui lòng liên hệ ngay với chúng tôi.</string>
-  <string name="purchase_error_unverified_wallet">Try to complete the purchase after verifying your wallet.</string>
+  <string name="purchase_error_unverified_wallet">Cố gắng hoàn tất giao dịch mua sau khi xác minh ví của bạn.</string>
+  <string name="purchase_error_try_other_method">Oops&#8230; Something is going on! Please try with a different payment method or contact us.</string>
+  <string name="purchase_error_try_other_amount">Are you sure your top-up amount is right? Please try with a different one or contact us!</string>
   <!--Billing address in purchase flow-->
   <string name="purchase_address_title">Địa chỉ thanh toán</string>
   <string name="purchase_address_address_field">Địa chỉ</string>
@@ -559,8 +568,11 @@
   <string name="promotions_tab_poa_title">TRẢI NGHIỆM &amp; KIẾM TIỀN</string>
   <string name="promotions_empty_promotions_body">Hiện không có chương trình khuyến mãi nào tại thời điểm này. Vui lòng quay lại sau!</string>
   <string name="promotions_empty_poa_body">Hiện không có ứng dụng kèm phần thưởng nào tại thời điểm này. Vui lòng quay lại sau!</string>
+  <string name="promotions_empty_first_purchase_body">Thực hiện giao dịch mua đầu tiên của bạn trong một trò chơi hoặc ứng dụng và mở khóa các chương trình khuyến mãi của chúng tôi!</string>
+  <string name="promotions_empty_suggested_games_title">Trò chơi đề xuất</string>
   <string name="promotions_perks_button">Đặc quyền</string>
   <string name="promotions_vouhers_button">Phiếu mua hàng</string>
+  <string name="promotions_tooltip">Earn free AppCoins Credits with our promotions!</string>
   <!--Update-->
   <string name="update_wallet_poa_notification_title">Cập nhật để được nhận phần thưởng</string>
   <string name="update_wallet_poa_notification_body">Vui lòng cập nhật Ví AppCoins để được nhận phần thưởng này.</string>
@@ -691,7 +703,7 @@
   <string name="subscriptions_canceled_body">Đã hủy</string>
   <string name="subscriptions_details_disclaimer">Giá trị bằng AppCoin có thể thay đổi cho lần thanh toán tiếp theo tùy thuộc vào tỷ giá hối đoái.</string>
   <string name="subscriptions_details_button">CHI TIẾT</string>
-  <string name="subscriptions_manage_button">QUẢN LÝ GÓI ĐĂNG KÝ</string>
+  <string name="subscriptions_manage_button">MANAGE SUBSCRIPTIONS</string>
   <string name="subscriptions_cancel_button">HỦY GÓI ĐĂNG KÝ</string>
   <string name="subscriptions_cancel_title">Hủy gói đăng ký</string>
   <string name="subscriptions_cancel_body">Bạn có chắc chắn muốn hủy gói đăng ký này?</string>
@@ -701,10 +713,14 @@
   <string name="subscriptions_cancel_confirmation_body">Bạn sẽ không bị tính phí cho gói đăng ký này nữa và có thể sử dụng nó cho đến %s.</string>
   <string name="subscriptions_category_title">Gói đăng ký</string>
   <string name="subscriptions_bonus_body">Bạn sẽ được nhận tiền thưởng trên mỗi lượt thanh toán.</string>
-  <string name="subscriptions_per_day">%1$s %2$s/ngày</string>
-  <string name="subscriptions_per_week">%1$s %2$s/tuần</string>
-  <string name="subscriptions_per_month">%1$s %2$s/tháng</string>
-  <string name="subscriptions_per_year">%1$s %2$s/năm</string>
+  <string name="subscriptions_per_day">%1$s/day</string>
+  <string name="subscriptions_per_week">%1$s/week</string>
+  <string name="subscriptions_per_month">%1$s/month</string>
+  <string name="subscriptions_per_year">%1$s/year</string>
+  <string name="subscriptions_per_several_day">%1$s every %2$s days</string>
+  <string name="subscriptions_per_several_week">%1$s every %2$s weeks</string>
+  <string name="subscriptions_per_several_month">%1$s every %2$s months</string>
+  <string name="subscriptions_per_several_year">%1$s every %2$s years</string>
   <!--New Gamification-->
   <string name="gamif_title">Nhận đến %s%% tiền thưởng!</string>
   <string name="gamif_bonus_received">Tiền thưởng đã nhận</string>
@@ -758,7 +774,7 @@
   <string name="carrier_billing_fees_disclaimer">Phí bổ sung có thể được áp dụng</string>
   <string name="carrier_billing_insert_phone_body">Vui lòng nhập số điện thoại của bạn</string>
   <string name="carrier_billing_phone_field">Số điện thoại của bạn...</string>
-  <string name="carrier_billing_carrier_fees_body">A %1$s fee will be charged</string>
+  <string name="carrier_billing_carrier_fees_body">Một khoản phí %1$s sẽ được tính</string>
   <string name="carrier_billing_purchase_info_body">%1$s trong %2$s.</string>
   <string name="carrier_billing_phone_confirmation_body">Số điện thoại của bạn là %s.</string>
   <string name="carrier_billing_enter_pin_body">Vui lòng nhập mã PIN nhận được qua SMS.</string>
@@ -829,13 +845,15 @@
   <string name="rate_us_improve_field__empty_error">Xin vui lòng viết vài dòng</string>
   <string name="rate_us_possitive_thanks_title">Cảm ơn bạn!</string>
   <string name="rate_us_possitive_thanks_body">Chúng tôi rất vui vì bạn thích ứng dụng này. Bạn có thể giúp chúng tôi bằng cách xếp hạng chúng tôi trên cửa hàng ứng dụng không?</string>
-  <string name="rate_us_possitive_rate_button">XẾP HẠNG VÍ APPCOINS</string>
+  <string name="rate_us_possitive_rate_button">RATE APPCOINS WALLET</string>
   <string name="rate_us_possitive_done_title">Cảm ơn phản hồi của bạn!</string>
+  <string name="rate_us_back_title">Wanna help us?</string>
+  <string name="rate_us_back_body">Rate the AppCoins Wallet on the app store so we can improve it.</string>
   <!--Card verification-->
   <string name="card_verification_body">Sử dụng thẻ tín dụng / thẻ ghi nợ của bạn để xác minh ví của mình.</string>
   <string name="card_verification_charde_disclaimer">Chúng tôi sẽ tính phí %s vào thẻ của bạn và tiền sẽ được hoàn lại ngay khi bạn xác nhận mã.</string>
   <string name="card_verification_code_title">Kiểm tra mã trong chi tiết giao dịch</string>
-  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issuer.</string>
+  <string name="card_verification_code_body">Mã sẽ xuất hiện trong bản tóm tắt giao dịch do công ty phát hành thẻ của bạn cung cấp.</string>
   <string name="card_verification_code_example_title">Ví dụ về Tóm tắt Giao dịch</string>
   <string name="card_verification_code_example_date">Ngày chuyển khoản</string>
   <string name="card_verification_code_example_description">Mô tả</string>
@@ -853,6 +871,8 @@
   <string name="card_verification_wallets_one_step_title">Một bước nữa để xác thực</string>
   <string name="card_verification_wallets_one_step_body">Chèn mã hiển thị trong chi tiết giao dịch.</string>
   <string name="card_verification_wallets_insert_bode_button">Nhập mã</string>
+  <string name="card_verification_no_attempts_title">Oops, you\'ve inserted a wrong code too many times so %1$s will be refunded to your card.</string>
+  <string name="card_verification_no_attempts_body">Please, start the verification process again.</string>
   <!--Vouchers-->
   <string name="voucher_card_body">Mua phiếu mua hàng này và nhận đến %s%% tiền thưởng.</string>
   <string name="voucher_buy_header">Phiếu mua hàng dành cho %s</string>
@@ -861,4 +881,6 @@
   <string name="voucher_code_title">Mã phiếu mua hàng</string>
   <string name="voucher_instructions_body">Truy cập %s và sử dụng mã để đổi phiếu mua hàng của bạn.</string>
   <string name="voucher_instructions_transactions">Bạn luôn có thể tìm thấy mã phiếu mua hàng trong lịch sử giao dịch.</string>
+  <string name="voucher_empty">No vouchers available at the moment.</string>
+  <string name="voucher_tooltip">You can now buy vouchers for games!</string>
 </resources>
