--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -5,6 +5,8 @@
   <string name="title_send_with_token">发送%s</string>
   <string name="title_request">接收</string>
   <string name="title_import">恢复钱包</string>
+  <!--Bottom navigation-->
+  <string name="bottom_navigation_my_wallets">我的钱包</string>
   <!-- Strings relatedwalletount creation -->
   <string name="prompt_password">密码</string>
   <string name="action_sign_in_short">Create</string>
@@ -333,7 +335,12 @@
   <string name="gamification_leveled_up_body">你现在可以在每次购买时获得%s奖金。继续购买以赚取更多！</string>
   <string name="gamification_leveled_up_notification_title">你已达到下一级！</string>
   <string name="gamification_leveled_up_notification_body">恭喜，现在你将在每次购买时获得%s奖金！</string>
-  <string name="gamification_how_max_level_body">恭喜！你达到了最高等级💃</string>
+  <string name="gamification_how_max_level_notification_title">您成功了！</string>
+  <string name="gamification_how_max_level_body">您已达到最高等级：每次购买均可获得%s的奖励！</string>
+  <string name="gamification_level_up_notification_title">离成功不远了！</string>
+  <string name="gamification_level_up_notification_body">再花费 %s AppCoins 可达到下一级。</string>
+  <string name="gamification_bonus_plus_perk_title">您获得了额外奖励！</string>
+  <string name="gamification_bonus_plus_perk_body">额外享受%1$s的奖励和%2$s的AppCoins积金。</string>
   <!-- Provide wallet address -->
   <string name="provide_wallet_body">允许AppCoins Wallet向%s提供你的钱包地址。</string>
   <string name="provide_wallet_body_placeholders">允许%1$s向%2$s提供你的钱包地址。</string>
@@ -410,7 +417,7 @@
   <string name="password">密码</string>
   <string name="repeat_password">重复密码</string>
   <string name="turn_on_button">开启</string>
-  <string name="no_thanks_button">No, thanks</string>
+  <string name="no_thanks_button">不，谢谢</string>
   <string name="remind_later_button">稍后提醒我</string>
   <string name="get_code_button">获取代码</string>
   <string name="confirm_button">确认</string>
@@ -499,7 +506,9 @@
   <string name="purchase_error_wallet_block_code_403">您的钱包似乎出现了问题。请与我们联系。</string>
   <string name="purchase_card_error_CVV">CVV/CVC错误</string>
   <string name="error_contac_us_body">如果问题仍然存在，请与我们联系。</string>
-  <string name="purchase_error_unverified_wallet">Try to complete the purchase after verifying your wallet.</string>
+  <string name="purchase_error_unverified_wallet">请在验证钱包后再尝试完成购买。</string>
+  <string name="purchase_error_try_other_method">糟糕&#8230;出错了！请尝试使用其他付款方式，或者与我们联系。</string>
+  <string name="purchase_error_try_other_amount">您确定充值金额正确无误吗？请尝试使用其他充值金额，或者与我们联系！</string>
   <!--Billing address in purchase flow-->
   <string name="purchase_address_title">帐单地址</string>
   <string name="purchase_address_address_field">地址</string>
@@ -559,8 +568,11 @@
   <string name="promotions_tab_poa_title">播放&amp;赚钱</string>
   <string name="promotions_empty_promotions_body">目前没有可用促销。请稍后再来！</string>
   <string name="promotions_empty_poa_body">目前没有提供奖励的应用。请稍后再来！</string>
+  <string name="promotions_empty_first_purchase_body">在游戏或应用内完成首次购买，即可解锁我们为您准备的促销！</string>
+  <string name="promotions_empty_suggested_games_title">推荐游戏</string>
   <string name="promotions_perks_button">津贴</string>
   <string name="promotions_vouhers_button"> 优惠券</string>
+  <string name="promotions_tooltip">通过我们的促销，赚取免费AppCoins积金！</string>
   <!--Update-->
   <string name="update_wallet_poa_notification_title">更新以获取奖励</string>
   <string name="update_wallet_poa_notification_body">请更新AppCoins Wallet以获取此奖励。</string>
@@ -691,7 +703,7 @@
   <string name="subscriptions_canceled_body">已取消</string>
   <string name="subscriptions_details_disclaimer">AppCoins下次付款的价值可能因汇率而有所不同。</string>
   <string name="subscriptions_details_button">详情</string>
-  <string name="subscriptions_manage_button">管理订购</string>
+  <string name="subscriptions_manage_button">MANAGE SUBSCRIPTIONS</string>
   <string name="subscriptions_cancel_button">取消订购</string>
   <string name="subscriptions_cancel_title">取消订购</string>
   <string name="subscriptions_cancel_body">是否确定要取消此订购？</string>
@@ -701,10 +713,14 @@
   <string name="subscriptions_cancel_confirmation_body">你不会再为此订购付款，你可以用到%s。</string>
   <string name="subscriptions_category_title">订购</string>
   <string name="subscriptions_bonus_body">每支付一次都会收到此奖励。</string>
-  <string name="subscriptions_per_day">%1$s%2$s/天</string>
-  <string name="subscriptions_per_week">%1$s%2$s/周</string>
-  <string name="subscriptions_per_month">%1$s%2$s/月</string>
-  <string name="subscriptions_per_year">%1$s%2$s/年</string>
+  <string name="subscriptions_per_day">%1$s/day</string>
+  <string name="subscriptions_per_week">%1$s/week</string>
+  <string name="subscriptions_per_month">%1$s/month</string>
+  <string name="subscriptions_per_year">%1$s/year</string>
+  <string name="subscriptions_per_several_day">%1$s every %2$s days</string>
+  <string name="subscriptions_per_several_week">%1$s every %2$s weeks</string>
+  <string name="subscriptions_per_several_month">%1$s every %2$s months</string>
+  <string name="subscriptions_per_several_year">%1$s every %2$s years</string>
   <!--New Gamification-->
   <string name="gamif_title">高达 %s%% 的奖金！</string>
   <string name="gamif_bonus_received">已收到的奖金</string>
@@ -758,7 +774,7 @@
   <string name="carrier_billing_fees_disclaimer">可能需要支付额外费用</string>
   <string name="carrier_billing_insert_phone_body">请输入您的电话号码</string>
   <string name="carrier_billing_phone_field">您的电话号码...</string>
-  <string name="carrier_billing_carrier_fees_body">A %1$s fee will be charged</string>
+  <string name="carrier_billing_carrier_fees_body">我们将收取%1$s的费用</string>
   <string name="carrier_billing_purchase_info_body">%2$s中的%1$s。</string>
   <string name="carrier_billing_phone_confirmation_body">您的电话号码是%s。</string>
   <string name="carrier_billing_enter_pin_body">请输入通过短信收到的PIN码。</string>
@@ -831,11 +847,13 @@
   <string name="rate_us_possitive_thanks_body">很高兴您喜欢我们的应用。您能帮忙在应用商店上给我们评分吗？</string>
   <string name="rate_us_possitive_rate_button">给APPCOINS WALLET评分</string>
   <string name="rate_us_possitive_done_title">感谢您的反馈！</string>
+  <string name="rate_us_back_title">想帮助我们吗？</string>
+  <string name="rate_us_back_body">在应用商店上给AppCoins Wallet评分，以便我们对其进行改进。</string>
   <!--Card verification-->
   <string name="card_verification_body">使用您的信用卡/借记卡验证钱包。</string>
   <string name="card_verification_charde_disclaimer">我们将向您的银行卡收取%s的费用，一旦您确认代码，我们将立即退款给您。</string>
   <string name="card_verification_code_title">在交易详细信息中查看代码</string>
-  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issuer.</string>
+  <string name="card_verification_code_body">一个唯一代码将出现在发卡银行提供的交易摘要中。</string>
   <string name="card_verification_code_example_title">交易摘要示例</string>
   <string name="card_verification_code_example_date">交易日期</string>
   <string name="card_verification_code_example_description">说明</string>
@@ -853,6 +871,8 @@
   <string name="card_verification_wallets_one_step_title">验证还差一步</string>
   <string name="card_verification_wallets_one_step_body">输入交易详细信息中出现的代码。</string>
   <string name="card_verification_wallets_insert_bode_button">输入代码</string>
+  <string name="card_verification_no_attempts_title">Oops, you\'ve inserted a wrong code too many times so %1$s will be refunded to your card.</string>
+  <string name="card_verification_no_attempts_body">Please, start the verification process again.</string>
   <!--Vouchers-->
   <string name="voucher_card_body">购买此优惠券即可获得高达%s%%的奖励。</string>
   <string name="voucher_buy_header">%s优惠券</string>
@@ -861,4 +881,6 @@
   <string name="voucher_code_title">优惠券代码</string>
   <string name="voucher_instructions_body">转到%s并使用代码兑换优惠券。</string>
   <string name="voucher_instructions_transactions">您始终可以在交易历史记录中找到优惠券代码。</string>
+  <string name="voucher_empty">目前没有可用的优惠券。</string>
+  <string name="voucher_tooltip">您现在可以购买游戏优惠券！</string>
 </resources>
